--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 207 - 6295449.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 207 - 6295449.md
@@ -1,11 +1,11 @@
 # Article 207
 
-I.-Sous réserve des dispositions qui suivent, la déduction opérée dans les conditions mentionnées aux articles 205 et 206 est
-définitivement acquise à l'entreprise. 
+I. – Sous réserve des dispositions qui suivent, la déduction opérée dans les conditions mentionnées aux articles 205 et 206
+est définitivement acquise à l'entreprise. 
 
-II.-1. Pour les biens immobilisés, une régularisation de la taxe initialement déduite est opérée chaque année pendant cinq
+II. – 1. Pour les biens immobilisés, une régularisation de la taxe initialement déduite est opérée chaque année pendant cinq
 ans, dont celle au cours de laquelle ils ont été acquis, importés, achevés, utilisés pour la première fois ou transférés
-entre secteurs d'activité constitués en application de l'article 209. 
+entre secteurs d'activité constitués en application de l'article 209.
 
 2. Chaque année, la régularisation est égale au cinquième du produit de la taxe initiale par la différence entre le
 coefficient de déduction de l'année et le coefficient de déduction de référence mentionné au 2 du V. Elle prend la forme
@@ -27,12 +27,12 @@ valeur absolue, à un dixième.
 
 1° Aux biens immobilisés dont le coefficient d'assujettissement de référence est nul ; 
 
-2° Aux immeubles livrés, acquis, apportés ou utilisés pour la première fois avant le 1er janvier 1996. 
+2° Aux immeubles livrés, acquis, apportés ou utilisés pour la première fois avant le 1er janvier 1996.
 
 6. Pour la détermination des coefficients de référence mentionnés au 2 et au 4, il n'est pas tenu compte des dispositions du
 1° et du 2° du 2 du V au titre de l'année où il est fait application de ces dispositions. 
 
-III.-1. Une régularisation de la taxe initialement déduite et grevant un bien immobilisé est également opérée : 
+III. – 1. Une régularisation de la taxe initialement déduite et grevant un bien immobilisé est également opérée : 
 
 1° Lorsqu'il est cédé ou apporté, sans que cette opération soit soumise à la taxe sur le prix total, sur la valeur totale ou
 dans les conditions fixées à l'article 268 du code général des impôts, ou est transféré entre secteurs d'activité constitués
@@ -49,8 +49,7 @@ lorsqu'il cesse d'être utilisé à des opérations ouvrant droit à déduction 
 5° Lorsqu'il cesse d'être utilisé à des opérations imposables. 
 
 2. Cette régularisation est égale à la somme des régularisations qui auraient été effectuées jusqu'au terme de la période de
-régularisation en application des 1, 2, 3 et 5 du II, en considérant que pour chacune des années restantes de cette
-période : 
+régularisation en application des 1,2,3 et 5 du II, en considérant que pour chacune des années restantes de cette période : 
 
 1° Dans les cas visés au 1° du 1, le coefficient de taxation est égal à zéro ; 
 
@@ -65,9 +64,9 @@ période :
 3. Dans les cas visés au 1° du 1, sous réserve que le bien constitue également une immobilisation pour le bénéficiaire de la
 cession, de l'apport ou du transfert, celui-ci peut déduire une fraction du montant de taxe sur la valeur ajoutée ayant grevé
 initialement le bien, à proportion du rapport entre le nombre d'années restant à courir, pour le cédant ou l'apporteur,
-jusqu'au terme de la période de régularisation et le nombre d'années total de celle-ci.A cette fin, le cédant ou l'apporteur
+jusqu'au terme de la période de régularisation et le nombre d'années total de celle-ci. A cette fin, le cédant ou l'apporteur
 délivre au bénéficiaire une attestation mentionnant le montant de la taxe qu'il est en droit de déduire. Cette déduction est
-opérée dans les conditions prévues à l'article 206. 
+opérée dans les conditions prévues à l'article 206.
 
 4. Les dispositions des 1 à 3 ne sont pas applicables : 
 
@@ -80,7 +79,7 @@ a. Qui ont été volés ou détruits, dès lors qu'il est justifié du vol ou de
 
 b. Dont le coefficient d'assujettissement de référence est nul. 
 
-IV.-1. (alinéa abrogé) 
+IV. – 1. (alinéa abrogé) 
 
 2. Lorsqu'un bien en stock, ou un bien immobilisé non encore utilisé, vient à être utilisé à des opérations ouvrant droit à
 déduction, la taxe initiale peut être déduite à proportion du coefficient de déduction résultant de ce changement. 
@@ -88,11 +87,10 @@ déduction, la taxe initiale peut être déduite à proportion du coefficient de
 3. Pour l'application du II et des 1° et 2° du 1 du III, un immeuble ou une fraction d'immeuble en stock est considéré comme
 immobilisé lorsque, au 31 décembre de la deuxième année qui suit celle au cours de laquelle est intervenu l'achèvement de
 l'immeuble, il est utilisé pendant plus d'un an pour une opération relevant d'une activité économique mentionnée à l'article
-256 A du code général des impôts.
+256 A du code général des impôts. 
 
-V.-1. La taxe initiale s'entend, selon le cas, de la taxe mentionnée au 1 du II de l'article 271 du code général des impôts
-ou de la fraction de taxe mentionnée sur les attestations prévues au 3 du III du présent article ou au 3 du I de l'article
-210. 
+V. – 1. La taxe initiale s'entend, selon le cas, de la taxe mentionnée au 1 du II de l'article 271 du code général des impôts
+ou de la fraction de taxe mentionnée sur les attestations prévues au 3 du III du présent article. 
 
 2. Les coefficients d'assujettissement, de taxation et d'admission de référence sont initialement égaux aux coefficients
 retenus pour le calcul de la déduction opérée en application de l'article 206 lors de l'acquisition, de l'importation ou de
@@ -108,7 +106,7 @@ prennent la valeur des coefficients mentionnés respectivement aux 3° à 5° du
 Le coefficient de déduction de référence est égal au produit des coefficients d'assujettissement, de taxation et d'admission
 de référence résultant des dispositions qui précèdent. 
 
-VI.-Le montant de la taxe dont la déduction a déjà été opérée doit être reversé dans les cas suivants : 
+VI. – Le montant de la taxe dont la déduction a déjà été opérée doit être reversé dans les cas suivants : 
 
 1° Lorsque les marchandises ont disparu ; 
 
@@ -119,24 +117,31 @@ Ce reversement doit être opéré avant le 25 du mois qui suit celui au cours du
 intervenu. Toutefois, ces reversements ne sont pas exigés lorsque les biens ont été détruits avant toute utilisation ou
 cession, ou volés, et qu'il est justifié de cette destruction ou de ce vol.
 
+**Nota:**
+
+Conformément à l'article 2 du décret n° 2015-1763 du 24 décembre 2015, les présentes dispositions s'appliquent aux dépenses
+d'investissements publics mis à disposition de délégataires de service public en application de contrats de délégation
+conclus à compter du 1er janvier 2016 et aux dépenses d'édification ou d'acquisition d'immeubles par des sociétés civiles
+d'attribution pour lesquels un état descriptif de division a été établi à compter de cette date.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2015-965 du 31 juillet 2015 - art. 1
+  - Décret n°2015-1763 du 24 décembre 2015 - art. 1
 
 _Cite_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 205
   - Code général des impôts, annexe 2, CGIAN2. - art. 206
-  - Code général des impôts, annexe 2, CGIAN2. - art. 210
-  - Code général des impôts, annexe 2, CGIAN2. - art. 268
   - Code général des impôts, CGI. - art. 256 A
   - Code général des impôts, CGI. - art. 257 bis
+  - Code général des impôts, CGI. - art. 268 (V)
+  - Code général des impôts, CGI. - art. 271 (V)
   - Code monétaire et financier - art. L313-7
 
 _Cité par_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 208 (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 209 (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 209 (M)
   - Code général des impôts, annexe 2, CGIAN2. - art. 260 K (V)
