--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
@@ -69,13 +69,12 @@ Les entrepositaires agréés transmettent au service des douanes et droits indir
 le dixième jour de chaque mois, une déclaration récapitulative comportant les renseignements mentionnés au premier alinéa et,
 le cas échéant, ceux prévus au 1° du II. 
 
-IV.-Les registres doivent être clôturés une fois par an, à la date de souscription de la déclaration des stocks mentionnée à
-l'article 408 du code général des impôts, pour les récoltants y compris les sociétés coopératives et leurs unions. La
-déclaration annuelle est transmise au service des douanes et droits indirects territorialement compétent, au plus tard le
-dixième jour du deuxième mois qui suit la clôture des comptes. 
+IV.-Les registres doivent être clôturés une fois par an pour les récoltants y compris les sociétés coopératives et leurs
+unions. La déclaration annuelle est transmise au service des douanes et droits indirects territorialement compétent, au plus
+tard le dixième jour du deuxième mois qui suit la clôture des comptes. 
 
-V.-Les registres peuvent être constitués par des annotations au verso des déclarations de récolte et des stocks mentionnées
-aux articles 407 et 408 du code général des impôts. 
+V.-Les registres peuvent être constitués par des annotations au verso des déclarations de récolte et des stocks mentionnées à
+l'article 407 du code général des impôts. 
 
 VI.-Les registres sont tenus par entrepôt fiscal suspensif de droits d'accises et sur les lieux mêmes où les produits sont
 détenus. 
@@ -100,6 +99,10 @@ et 614 A dudit code.
 En cas de manquements graves ou répétés aux dispositions ci-dessus, la qualité d'entrepositaire agréé peut être retirée par
 le directeur régional des douanes et droits indirects.
 
+**Nota:**
+
+Modification effectuée en conséquence de l'article 4-1° de l'ordonnance n° 2015-1247 du 7 octobre 2015.
+
 **Liens relatifs à cet article**
 
 _Cité par_:
@@ -122,9 +125,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2012-1075 du 21 septembre 2012 - art. 2
-  - Décret n°2012-1075 du 21 septembre 2012 - art. 4
-  - Décret n°2012-1075 du 21 septembre 2012 - art. 5
+  - Décret n°2016-775 du 10 juin 2016 - art. 3
 
 _Cite_:
 
