--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
@@ -97,11 +97,7 @@ tenue de la comptabilité matières telles que prévues par le présent article 
 et 614 A dudit code. 
 
 En cas de manquements graves ou répétés aux dispositions ci-dessus, la qualité d'entrepositaire agréé peut être retirée par
-le directeur régional des douanes et droits indirects.
-
-**Nota:**
-
-Modification effectuée en conséquence de l'article 4-1° de l'ordonnance n° 2015-1247 du 7 octobre 2015.
+le directeur interrégional des douanes et droits indirects.
 
 **Liens relatifs à cet article**
 
@@ -125,7 +121,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2016-775 du 10 juin 2016 - art. 3
+  - Décret n°2016-935 du 7 juillet 2016 - art. 8 (V)
 
 _Cite_:
 
