--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 M - 6294734.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 M - 6294734.md
@@ -3,26 +3,22 @@
 En application des dispositions du IV de l'article 302 G du code général des impôts, la demande de compensation ou de
 remboursement des droits acquittés ou supportés est effectuée par l'entrepositaire agréé auprès du service des douanes et
 droits indirects ayant dans son ressort territorial l'entrepôt suspensif de droits d'accises dans lequel l'entrepositaire
-agréé détient les produits concernés.
+agréé détient les produits concernés. 
 
 Le bénéfice de la compensation est demandé par l'entrepositaire agréé sur la déclaration de liquidation des droits visée au
-III de l'article 302 D du code général des impôts.
+III de l'article 302 D du code général des impôts. 
 
 Le bénéfice du remboursement des droits est demandé par l'entrepositaire agréé lorsque la compensation des droits ne peut
-être réalisée par celui-ci au cours des trois mois qui suivent la demande.
+être réalisée par celui-ci au cours des trois mois qui suivent la demande. 
 
-Le directeur régional des douanes et droits indirects est compétent pour statuer sur les demandes susmentionnées de
+Le directeur interrégional des douanes et droits indirects est compétent pour statuer sur les demandes susmentionnées de
 compensation ou de remboursement des droits acquittés ou supportés.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - CGI 302 G, 302 D
-
 _Modifié par_:
 
-  - Décret n°2006-532 du 11 mai 2006 - art. 2 () JORF 12 mai 2006
+  - Décret n°2016-935 du 7 juillet 2016 - art. 8 (V)
 
 _Cité par_:
 
@@ -30,6 +26,7 @@ _Cité par_:
   - Code général des impôts, annexe 3, CGIAN3. - art. 178-0 bis B (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 50-00 G (V)
 
-**Liens**:
+_Cite_:
 
-  - HISTO: Edition du 1er janvier 2007
+  - Code général des impôts, CGI. - art. 302 D (V)
+  - Code général des impôts, CGI. - art. 302 G (V)
