--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 D - 6295032.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 D - 6295032.md
@@ -10,24 +10,21 @@ condamnations pour blessures, coups ou homicide involontaires et pour infraction
 
 D'une amende fiscale prononcée par un tribunal ; 
 
-D'une sanction fiscale prononcée par l'administration pour manoeuvres frauduleuses.
+D'une sanction fiscale prononcée par l'administration pour manœuvres frauduleuses. 
 
-**Nota:**
-
-Conformément au décret n° 2013-1034 du 15 novembre 2013, article 2 : Ces dispositions s'appliquent aux demandes d'agrément ou
-de renouvellement d'agrément présentées conformément aux articles 371 F et 371 R de l'annexe II au code général des impôts
-déposées à compter du 1er janvier 2014.
+Les centres établissent, par la production d'attestations sur l'honneur faites par les intéressés, que les personnes qui les
+administrent ne sont pas frappées par les interdictions prévues aux articles 371 K bis et 371 V bis.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2013-1034 du 15 novembre 2013 - art. 1
+  - Décret n°2016-1356 du 11 octobre 2016 - art. 1
 
 _Cité par_:
 
-  - CODE GENERAL DES IMPOTS ANNEXE 2, CGIAN2. - art. 371 QA (M)
   - Code général des impôts, annexe 2, CGIAN2. - art. 371 EA (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 QA (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 371 R (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 371 V (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 371 Z duodecies (V)
@@ -36,5 +33,7 @@ _Cité par_:
 
 _Cite_:
 
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 K bis (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 V bis (V)
   - Code général des impôts, CGI. - art. 1750
   - Code de procédure pénale - art. 775
