--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 bis L - 22006304.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 bis L - 22006304.md
@@ -28,7 +28,11 @@ maximum de trente jours suivant la date de la résiliation de la lettre de missi
 comptable ; 
 
 e) En cas de démission d'un centre de gestion agréé ou d'une association agréée suivie, dans le délai maximum de trente
-jours, de la conclusion d'une lettre de mission avec un professionnel de l'expertise comptable. 
+jours, de la conclusion d'une lettre de mission avec un professionnel de l'expertise comptable ; 
+
+f) En cas de signature d'une première lettre de mission avec un professionnel de l'expertise comptable avant la clôture de
+l'exercice comptable pour les contribuables franchissant les limites de chiffre d'affaires des régimes définis aux articles
+50-0,64 bis et 102 ter du code général des impôts. 
 
 Les déclarations de résultats des clients ou adhérents mentionnés au premier alinéa sont accompagnées d'une attestation
 fournie par le professionnel de l'expertise comptable indiquant la date de signature de la lettre de mission spécifique et le
@@ -38,15 +42,19 @@ système de transfert des données fiscales et comptables.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2010-297 du 19 mars 2010 - art. 1
+  - Décret n°2016-1356 du 11 octobre 2016 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 bis B (V)
+  - Code général des impôts, CGI. - art. 102 ter
+  - Code général des impôts, CGI. - art. 158
+  - Code général des impôts, CGI. - art. 1649 quater L
+  - Code général des impôts, CGI. - art. 50-0
+  - Code général des impôts, CGI. - art. 64 bis
 
 _Cité par_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 371 bis D (V)
-
-_Cite_:
-
-  - Code général des impôts, CGI. - art. 158
-  - Code général des impôts, CGI. - art. 1649 quater L
