--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 A - 6295028.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 A - 6295028.md
@@ -12,10 +12,10 @@ professionnelles de personnes exerçant la même profession, des métiers simila
 unions. 
 
 Les centres doivent avoir pour objet de fournir à leurs adhérents industriels, commerçants, artisans ou agriculteurs tous
-services en matière de gestion notamment dans les domaines de l'assistance technique et de la formation ainsi qu'une analyse
-des informations économiques, comptables et financières en matière de prévention des difficultés économiques et financières.
-Ces services sont réservés aux membres adhérents. Les formations proposées par l'organisme agréé sont également offertes au
-représentant de l'adhérent. 
+services en matière de gestion notamment dans les domaines de l'assistance technique et de la formation ayant trait au droit,
+à la fiscalité, à la comptabilité ou à la gestion ainsi qu'une analyse des informations économiques, comptables et
+financières en matière de prévention des difficultés économiques et financières. Ces services sont réservés aux membres
+adhérents. Les formations proposées par l'organisme agréé sont également offertes au représentant de l'adhérent. 
 
 Ils ne peuvent agir en qualité de mandataires de leurs membres. 
 
@@ -37,7 +37,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2015-185 du 17 février 2015 - art. 1
+  - Décret n°2016-1356 du 11 octobre 2016 - art. 1
 
 _Cite_:
 
