--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 LA - 6295056.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 LA - 6295056.md
@@ -2,19 +2,19 @@
 
 Pour l'application de l'article 1649 quater E bis du code général des impôts, la clientèle des industriels, commerçants,
 artisans et agriculteurs est informée de leur qualité d'adhérent d'un centre de gestion agréé et de ses conséquences en ce
-qui concerne l'acceptation des règlements par chèque selon les modalités fixées par les articles 371 LB à 371 LE.
+qui concerne l'acceptation des règlements par chèque ou par carte bancaire selon les modalités fixées par les articles 371 LB
+à 371 LE.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - CGI 1649 quater E bis
-  - CGIAN2 371 LB à 371 LE
-
-_Créé par_:
-
-  - Décret n°79-638 du 27 juillet 1979 - art. 1 (V) JORF 28 juillet 1979
-
 _Codifié par_:
 
-  - Décret n°81-866 1981-09-15
+  - Décret n°81-866 du 15 septembre 1981
+
+_Modifié par_:
+
+  - Décret n°2016-1356 du 11 octobre 2016 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, CGI. - art. 1649 quater E bis
