--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 V - 6295079.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 V - 6295079.md
@@ -1,35 +1,40 @@
 # Article 371 V
 
 Le directeur mentionné à l'article 371 S, après avoir mis en demeure l'association de présenter ses observations sur les
-faits qui lui sont reprochés, peut lui retirer l'agrément :
+faits qui lui sont reprochés, peut lui retirer l'agrément : 
 
 1° En cas d'inexécution des engagements pris par l'association ou de violation des obligations qui lui incombent en vertu des
-statuts ou du règlement intérieur ;
+statuts ou du règlement intérieur ; 
 
 2° En cas de non-respect de la convention prévue à l'article 371 O entraînant la dénonciation de celle-ci par
-l'administration fiscale ;
+l'administration fiscale ; 
 
 3° Au cas où le nombre des adhérents de l'association, tel qu'il est défini à l'article 371 N est inférieur pendant plus d'un
-an au chiffre minimum prévu à cet article ;
+an au seuil fixé à cet article ; 
 
 4° Au cas où l'association conserve parmi ses dirigeants ou administrateurs une personne n'ayant pas respecté ses obligations
 déclaratives ou de paiement en matière fiscale ou ayant fait l'objet, postérieurement à l'agrément, d'une des sanctions
-prévues à l'article 371 D ;
+prévues à l'article 371 D ; 
 
 5° Au cas où l'association ne prononce pas l'exclusion des adhérents qui ne respectent pas les obligations leur incombant en
-vertu des statuts ou du règlement intérieur.
+vertu des statuts ou du règlement intérieur ; 
+
+6° En cas de maintien d'un bureau secondaire ne respectant pas les conditions prévues à l'article 371 N pendant plus d'un an.
 
 **Nota:**
 
-Conformément au décret n° 2013-1034 du 15 novembre 2013, article 2 : Ces dispositions ne s'appliquent pas aux agréments
-délivrés avant le 1er janvier 2014.
+
 
 **Liens relatifs à cet article**
 
 _Cite_:
 
   - CGIAN2 371 O, 371 N, 371 D, 371 S
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 D (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 N (VT)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 O (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 371 S (V)
 
 _Modifié par_:
 
-  - Décret n°2013-1034 du 15 novembre 2013 - art. 1
+  - Décret n°2016-1356 du 11 octobre 2016 - art. 1
