--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 AX - 6294303.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 AX - 6294303.md
@@ -1,76 +1,61 @@
 # Article 171 AX
 
-I.-Les personnes morales mentionnées au premier alinéa de l'article 242 sexies du code général des impôts déposent, dans les
-mêmes délais que leur déclaration de résultats ou de bénéfices, au titre de l'exercice au cours duquel l'investissement est
-livré, ou achevé lorsqu'il s'agit d'un immeuble, une déclaration spéciale en double exemplaire, conforme à un modèle établi
-par l'administration fiscale, comportant les renseignements suivants : 
+I. – Pour l'application de l'article 242 bis du code général des impôts, à l'occasion de chaque transaction réalisée par
+l'intermédiaire d'une plate-forme de mise en relation par voie électronique, l'entreprise communique au vendeur, au
+prestataire ou aux parties à l'échange ou au partage d'un bien ou d'un service, lorsque ceux-ci ont perçu des sommes à
+l'occasion des transactions, les informations relatives aux régimes fiscaux et à la réglementation sociale applicables à ces
+sommes, aux obligations déclaratives et de paiement qui en résultent auprès de l'administration fiscale et des organismes de
+recouvrement des cotisations sociales ainsi qu'aux sanctions encourues en cas de manquement à ces obligations.
 
-1° Les éléments permettant leur identification : dénomination sociale, adresse, code activité et numéro SIREN ; 
+II. – Les sites internet édités par les entreprises mentionnées ci-dessus indiquent les liens hypertexte directs ou indirects
+vers les sites de l'administration fiscale et des organismes de sécurité sociale permettant d'accéder aux informations
+mentionnées au I. L'obligation prévue au I est réputée satisfaite si les messages envoyés aux parties aux transactions
+mentionnées au I incluent de manière lisible ces liens hypertexte.
 
-2° L'identité de leurs associés ou membres (nom, prénom, dénomination sociale, adresse, numéro SIREN) et la répartition de
-leurs droits dans les résultats ; 
+La liste de ces liens est publiée au Bulletin officiel des finances publiques-impôts (BOFiP-Impôts).
 
-3° Pour chaque investissement financé avec le recours à l'un des dispositifs prévus aux articles 199 undecies A,199 undecies
-B et 217 undecies du code général des impôts : 
+III. – Le document mentionné au II de l'article 242 bis précité comporte les indications suivantes :
 
-a) La nature de l'investissement et le secteur d'investissement, conformément à la liste fixée par l'administration fiscale,
-auquel il est affecté ; 
+1° Sa date d'émission ;
 
-b) La collectivité sur le territoire de laquelle est situé ou exploité à titre principal l'investissement (Martinique,
-Guadeloupe, Guyane, Réunion, Saint-Martin, Saint-Barthélemy, Saint-Pierre-et-Miquelon, Mayotte, Nouvelle-Calédonie, Polynésie
-française, Wallis-et-Futuna, Terres australes et antarctiques françaises) ; 
+2° Le nom complet et l'adresse de l'entreprise de mise en relation ainsi que son numéro de taxe sur la valeur ajoutée
+intracommunautaire ou, si elle en est dépourvue, son numéro d'identité défini au premier alinéa de l'article R. 123-221 du
+code de commerce ou, pour les entreprises non résidentes, leur numéro d'immatriculation auprès de l'administration fiscale de
+leur pays de résidence ;
 
-c) Le nom de la commune ou, à Wallis-et-Futuna, de la circonscription sur le territoire de laquelle est situé ou exploité à
-titre principal l'investissement ; 
+3° Le nom complet et l'adresse électronique et, le cas échéant, postale de l'utilisateur, ainsi que, si ce dernier est une
+entreprise, son numéro de taxe sur la valeur ajoutée intracommunautaire ou, si elle en est dépourvue, son numéro d'identité
+défini au premier alinéa de l'article R. 123-221 du code de commerce ou, pour les entreprises non résidentes, leur numéro
+d'immatriculation auprès de l'administration fiscale de leur pays de résidence ;
 
-d) Sa date de livraison ou d'achèvement, ainsi que sa date de mise en location et de début d'exploitation ; 
+4° Le nombre des transactions réalisées ;
 
-e) Son prix de revient total hors taxes ; 
+5° Le montant total des sommes perçues par l'utilisateur à l'occasion des transactions réalisées sur une plate-forme, dont
+les entreprises de mise en relation ont connaissance, hors commissions perçues par l'entreprise.
 
-f) S'il y a lieu, la date d'attribution, la nature et le montant de chacune des subventions accordées pour financer
-l'investissement, ainsi que le montant et la nature des aides accordées au titre d'un régime fiscal local d'aide à
-l'investissement ; 
+IV. – Le présent article s'applique aux utilisateurs résidents ou établis en France ou qui effectuent des opérations situées
+en France au sens des articles 258 à 259 D du code général des impôts.
 
-g) L'identification de chacune des entreprises exploitantes ou locataires : dénomination sociale ou commerciale, adresse,
-code activité et numéro SIREN ainsi que, s'il y a lieu, la nature de ses liens avec les personnes morales mentionnées au
-premier alinéa ; 
+**Nota:**
 
-h) Le montant de la base de calcul de l'avantage fiscal et, s'il y a lieu, le taux de la réduction d'impôt appliquée ; 
-
-i) Le cas échéant, la quote-part de l'aide fiscale rétrocédée à l'exploitant ; 
-
-j) Le nombre d'emplois directs, en équivalent temps plein, devant être créés ou maintenus pendant les cinq premières années
-d'exploitation de l'investissement ; 
-
-k) Le cas échéant, la date de l'accord, de l'agrément ou de l'autorisation préalable de l'administration. 
-
-II.-Lorsque l'investissement consiste en la réalisation de logements et ouvre droit aux dispositions prévues par les articles
-199 undecies A ou 217 undecies du code général des impôts, la déclaration précise également : 
-
-1° Si l'investissement consiste en l'acquisition ou la construction de logements ; 
-
-2° Le nombre et le type de ces logements ; 
-
-3° Si la location de ces logements relève du secteur libre ou intermédiaire ; 
-
-4° Si les logements sont situés sur le territoire d'une zone urbaine sensible définie au 3 de l'article 42 de la loi n°
-95-115 du 4 février 1995 d'orientation pour l'aménagement et le développement du territoire ; 
-
-5° La nature des équipements installés lorsque l'investissement comporte l'acquisition d'équipements utilisant une source
-d'énergie renouvelable.
+En conséquence de l'article 10-I-1° de la loi n° 2018-898 du 28 octobre 2018, cet article devient sans objet.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Loi n°95-115 du 4 février 1995 - art. 42
-  - Code général des impôts, CGI. - art. 199 undecies A
-  - Code général des impôts, CGI. - art. 242 sexies
-
 _Modifié par_:
 
-  - Décret n°2008-294 du 1er avril 2008 - art. 2
+  - Décret n°2017-126 du 2 février 2017 - art. 1
 
-_Abrogé par_:
+**Liens**:
 
-  - Décret n°2010-472 du 10 mai 2010 - art. 1
+  - PERIME: Décret n°2019-559 du 6 juin 2019 - art. 2
+
+_Cite_:
+
+  - Code de commerce - art. R123-221
+  - Code général des impôts, CGI. - art. 242 bis
+  - Code général des impôts, CGI. - art. 258
+
+_Cité par_:
+
+  - Code de la sécurité sociale. - art. R114-15 (V)
