--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 283 - 6295656.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 283 - 6295656.md
@@ -1,30 +1,29 @@
 # Article 283
 
 Tout débitant préposé à la gestion d'un débit de tabacs est seul responsable de l'exploitation de ce débit, notamment des
-commandes passées aux fournisseurs et du paiement des livraisons qui en résultent.
+commandes passées aux fournisseurs et du paiement des livraisons qui en résultent. 
 
 Les débitants ne peuvent recevoir pour la commercialisation des tabacs manufacturés et la publicité concernant ces produits,
-aucun avantage, direct ou indirect, autre que la remise prévue au 3° du I de l'article 570 du code général des impôts.
+aucun avantage, direct ou indirect, autre que la remise prévue au 3° du I de l'article 570 du code général des impôts. 
 
-La répartition des espaces publicitaires entre les différentes marques est arrêtée, sur le plan national, par un accord entre
-les fabricants, les fournisseurs et les débitants. A défaut d'accord, le litige est soumis à l'arbitrage dans les conditions
-prévues au décret n° 80-354 du 14 mai 1980 relatif à l'arbitrage.
+<font color="#000000" size="1">(Dispositions devenues sans objet)</font>
+
+**Nota:**
+
+Au deuxième alinéa, les mots "et la publicité concernant ces produits" et le troisième alinéa deviennent sans objet
+
+Modification effectuée en conséquence de l'article 23 III de la loi n° 2016-41 du 26 janvier 2016
 
 **Liens relatifs à cet article**
 
-_Cite_:
+_Codifié par_:
 
-  - CGI 570
-  - Décret n°80-354 1980-05-14
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2000
+  - Décret n°2000-477 du 2 juin 2000
 
 _Modifié par_:
 
-  - Loi - art. 18 (V) JORF 31 décembre 1999
+  - Décret n°2017-698 du 2 mai 2017 - art. 2
 
-_Codifié par_:
+_Cite_:
 
-  - Décret n°2000-477 2000-06-02
+  - Code général des impôts, CGI. - art. 570 (VT)
