--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
@@ -1,6 +1,6 @@
 # Article 286 I
 
-I.-1° Pour les entrepositaires agréés produisant des produits vitivinicoles régis par le règlement (CE) n° 1234/2007 du
+I. – 1° Pour les entrepositaires agréés produisant des produits vitivinicoles régis par le règlement (CE) n° 1234/2007 du
 Conseil du 22 octobre 2007 portant organisation commune des marchés dans le secteur agricole et dispositions spécifiques en
 ce qui concerne certains produits de ce secteur (règlement " OCM unique "), la comptabilité matières est constituée par les
 registres vitivinicoles prévus par le règlement (CE) n° 436/2009 de la Commission du 26 mai 2009 portant modalités
@@ -11,7 +11,7 @@ registres à tenir dans le secteur vitivinicole ;
 2° L'entrepositaire agréé doit remettre une copie des documents constituant la comptabilité matières aux agents des douanes
 et droits indirects, sur leur demande. 
 
-II.-Outre les dispositions de la réglementation communautaire susmentionnée, les registres vitivinicoles sont établis de la
+II. – Outre les dispositions de la réglementation communautaire susmentionnée, les registres vitivinicoles sont établis de la
 manière suivante. 
 
 1° Les différentes opérations sont enregistrées, sans blanc ni rature, sur un registre aux pages numérotées, ou selon une
@@ -58,7 +58,7 @@ aux dispositions européennes et aux informations prévues au 1° du II ;
 
 b) La reprise des inventaires physiques des produits réalisés au moment de la clôture de l'exercice comptable. 
 
-III.-Les entrepositaires agréés doivent effectuer la balance des registres en y inscrivant pour tous les produits
+III. – Les entrepositaires agréés doivent effectuer la balance des registres en y inscrivant pour tous les produits
 vitivinicoles, au plus tard le dixième jour de chaque mois, le stock théorique en début du mois précédent, le stock théorique
 en fin du mois précédent et le total des entrées et des sorties du mois précédent. 
 
@@ -69,14 +69,14 @@ Les entrepositaires agréés transmettent au service des douanes et droits indir
 le dixième jour de chaque mois, une déclaration récapitulative comportant les renseignements mentionnés au premier alinéa et,
 le cas échéant, ceux prévus au 1° du II. 
 
-IV.-Les registres doivent être clôturés une fois par an pour les récoltants y compris les sociétés coopératives et leurs
+IV. – Les registres doivent être clôturés une fois par an pour les récoltants y compris les sociétés coopératives et leurs
 unions. La déclaration annuelle est transmise au service des douanes et droits indirects territorialement compétent, au plus
 tard le dixième jour du deuxième mois qui suit la clôture des comptes. 
 
-V.-Les registres peuvent être constitués par des annotations au verso des déclarations de récolte et des stocks mentionnées à
-l'article 407 du code général des impôts. 
+V. – Les registres peuvent être constitués par des annotations au verso des déclarations de récolte et des stocks mentionnées
+à l'article 407 du code général des impôts. 
 
-VI.-Les registres sont tenus par entrepôt fiscal suspensif de droits d'accises et sur les lieux mêmes où les produits sont
+VI. – Les registres sont tenus par entrepôt fiscal suspensif de droits d'accises et sur les lieux mêmes où les produits sont
 détenus. 
 
 Au sein d'un site d'exploitation, les registres sont tenus au siège de l'exploitation. 
@@ -86,15 +86,15 @@ Le siège de l'exploitation s'entend du lieu où est située l'installation prin
 Dans ce cas, les entrepositaires agréés sont tenus d'indiquer à l'administration des douanes et droits indirects l'adresse de
 ce lieu. 
 
-VII.-Les registres vitivinicoles peuvent être regroupés sur un seul document. 
+VII. – Les registres vitivinicoles peuvent être regroupés sur un seul document. 
 
-VIII.-Les registres et les pièces justificatives nécessaires à leur tenue et les documents prévus aux IV et VI sont conservés
-dans les conditions et selon les modalités fixées à l'article L. 102 B du livre des procédures fiscales. 
+VIII. – Les registres et les pièces justificatives nécessaires à leur tenue et les documents prévus aux IV et VI sont
+conservés dans les conditions et selon les modalités fixées à l'article L. 102 B du livre des procédures fiscales. 
 
-IX.-La validation des documents mentionnés aux articles 302 M et 302 M ter du code général des impôts pour l'expédition ou
-l'enlèvement des produits vitivinicoles n'est possible que si l'entrepositaire agréé respecte les obligations afférentes à la
-tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées aux articles 614
-et 614 A dudit code. 
+IX. – La validation des documents mentionnés aux articles 302 M, 302 M bis et 302 M ter du code général des impôts pour
+l'expédition ou l'enlèvement des produits vitivinicoles n'est possible que si l'entrepositaire agréé respecte les obligations
+afférentes à la tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées
+aux articles 614 et 614 A dudit code. 
 
 En cas de manquements graves ou répétés aux dispositions ci-dessus, la qualité d'entrepositaire agréé peut être retirée par
 le directeur interrégional des douanes et droits indirects.
@@ -121,15 +121,18 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2016-935 du 7 juillet 2016 - art. 8 (V)
+  - Décret n°2016-1584 du 24 novembre 2016 - art. 2
 
 _Cite_:
 
   - Code général des impôts, CGI. - art. 302 D
   - Code général des impôts, CGI. - art. 302 M
-  - Code général des impôts, CGI. - art. 407
+  - Code général des impôts, CGI. - art. 302 M bis (VD)
+  - Code général des impôts, CGI. - art. 302 M ter (VD)
+  - Code général des impôts, CGI. - art. 407 (V)
+  - Code général des impôts, CGI. - art. 450 (VD)
   - Code général des impôts, CGI. - art. 614
   - Livre des procédures fiscales - art. L102 B
   - Code rural ancien - art. 661
   - Code rural - art. L621-1
-  - Code rural - art. L632-1
+  - Code rural - art. L632-1 (V)
