--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
@@ -56,8 +56,8 @@ alcooliques en exonération de droits d'accises, prévus au 1° du I de l'articl
 
 17° Autorisation donnée aux entrepositaires agréés mentionnés à l'article 302 G du code général des impôts et des débitants
 de boissons mentionnés à l'article 502 du même code, d'utiliser leurs factures ou tout autre document commercial, en lieu et
-place des documents d'accompagnement mentionnés à l'article 302 M du code précité, prévue par le II de l'article 111 H bis de
-l'annexe III au code général des impôts ; 
+place des documents d'accompagnement mentionnés aux articles 302 M bis et 302 M ter du code précité, prévue par le II de
+l'article 111 H bis de l'annexe III au code général des impôts ; 
 
 18° Agrément des procédés de dénaturation des essences d'absinthe et produits assimilés, prévu par le premier alinéa de
 l'article 178 P de l'annexe III au code général des impôts ; 
@@ -100,8 +100,8 @@ prévue par le deuxième alinéa de l'article 54-0 Z de l'annexe IV au code gén
 
 35° Accord de restitution ou de remise des droits et taxes après constatation par le service des douanes et droits indirects
 de la preuve de la sortie du produit du territoire de l'Union européenne ou après présentation d'un des documents mentionnés
-à l'article 302 M du code général des impôts, prévu par le dernier alinéa de l'article 54-0 Z de l'annexe IV au code général
-des impôts ; 
+aux articles 302 M, 302 M bis et 302 M ter du code général des impôts, prévu par le dernier alinéa de l'article 54-0 Z de
+l'annexe IV au code général des impôts ; 
 
 36° Habilitation à répartir les capsules collectives représentatives des droits destinées aux récoltants, prévue par le
 premier alinéa de l'article 54-0 BW de l'annexe IV au code général des impôts ; 
@@ -174,7 +174,7 @@ de l'annexe I au même code.
 
 _Modifié par_:
 
-  - Décret n°2016-935 du 7 juillet 2016 - art. 8 (V)
+  - Décret n°2016-1584 du 24 novembre 2016 - art. 2
 
 _Cite_:
 
@@ -184,43 +184,52 @@ _Cite_:
   - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis K (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 275 ter B (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 286 I (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 N
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 J (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 M (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 N (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 111 H bis (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 C
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 D
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 E
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 A
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 E (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 F (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 A (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 B (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 C (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 144 bis (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 178 AA
-  - Code général des impôts, annexe 3, CGIAN3. - art. 178 P
+  - Code général des impôts, annexe 3, CGIAN3. - art. 178 AA (V)
+  - Code général des impôts, annexe 3, CGIAN3. - art. 178 P (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 203 (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 207 (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 151
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AM
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AP
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AU
-  - Code général des impôts, annexe 4, CGIAN4. - art. 50 C
+  - Code général des impôts, annexe 4, CGIAN4. - art. 151 (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AD bis (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AM (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AP (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AU (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AW (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 50 C (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 50-00 B (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 52 quater (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 BW
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 C
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 I
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 U
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 V
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 Z
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54 A (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 BW (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 C (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 G (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 I (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 U (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 V (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 Z (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 56 J duodecies (V)
-  - Code général des impôts, CGI. - art. 302 D
-  - Code général des impôts, CGI. - art. 302 D bis
-  - Code général des impôts, CGI. - art. 302 G
-  - Code général des impôts, CGI. - art. 302 H ter
-  - Code général des impôts, CGI. - art. 302 J
-  - Code général des impôts, CGI. - art. 302 K
-  - Code général des impôts, CGI. - art. 306
-  - Code général des impôts, CGI. - art. 309
-  - Code général des impôts, CGI. - art. 311 bis
-  - Code général des impôts, CGI. - art. 327
-  - Code général des impôts, CGI. - art. 502
+  - Code général des impôts, CGI. - art. 302 D (V)
+  - Code général des impôts, CGI. - art. 302 D bis (VT)
+  - Code général des impôts, CGI. - art. 302 G (V)
+  - Code général des impôts, CGI. - art. 302 H ter (V)
+  - Code général des impôts, CGI. - art. 302 J (V)
+  - Code général des impôts, CGI. - art. 302 K (V)
+  - Code général des impôts, CGI. - art. 302 M (V)
+  - Code général des impôts, CGI. - art. 302 M bis (V)
+  - Code général des impôts, CGI. - art. 302 M ter (V)
+  - Code général des impôts, CGI. - art. 306 (V)
+  - Code général des impôts, CGI. - art. 309 (V)
+  - Code général des impôts, CGI. - art. 311 bis (V)
+  - Code général des impôts, CGI. - art. 327 (V)
   - Code général des impôts, CGI. - art. 523 (V)
   - Code général des impôts, CGI. - art. 530 (V)
   - Code général des impôts, CGI. - art. 535 (V)
-  - Code général des impôts, CGI. - art. 543 (V)
-  - Code général des impôts, CGI. - art. 568
+  - Code général des impôts, CGI. - art. 568 (VT)
