--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 - 6296124.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 - 6296124.md
@@ -1,27 +1,22 @@
 # Article 371
 
-Les personnes sans domicile ni résidence fixe, mentionnées à l'article 23 du décret n° 70-708 du 31 juillet 1970 relatif à
-l'exercice des activités ambulantes et au régime applicable aux personnes circulant en France sans domicile ni résidence
-fixe, sont tenues d'accomplir leurs obligations fiscales auprès des services des impôts dont relève la commune à laquelle
-elles se trouvent rattachées.
+Les personnes sans domicile ni résidence fixe sont tenues d'accomplir leurs obligations fiscales auprès des services des
+impôts dont relève la commune où est situé l'organisme auprès duquel elles ont fait élection de domicile dans les conditions
+prévues à l'article L. 264-1 du code de l'action sociale et des familles. 
 
 Lorsque, pour une même commune, il existe plusieurs services des impôts à compétence territoriale déterminée, les obligations
 fiscales sont accomplies auprès du service désigné par l'administration des impôts.
 
 **Liens relatifs à cet article**
 
-_Anciens textes_:
+_Codifié par_:
 
-  - CGIAN2 368 bis
+  - Décret n°87-940 du 23 novembre 1987
+
+_Modifié par_:
+
+  - Décret n°2017-1522 du 2 novembre 2017 - art. 4
 
 _Cite_:
 
-  - Décret n°70-708 du 31 juillet 1970 - art. 23 (M)
-
-_Codifié par_:
-
-  - Décret n°87-940 1987-11-23
-
-**Liens**:
-
-  - HISTO: Edition du 10 août 1987
+  - Code de l'action sociale et des familles - art. L264-1
