--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 A - 6294376.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 A - 6294376.md
@@ -34,11 +34,11 @@ Modifications effectuées en conséquence dedes décrets n° 2009-1377 du 10 nov
 
 _Modifié par_:
 
-  - Décret n°2012-653 du 4 mai 2012 - art. 2
+  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 202 C (M)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 202 C (V)
 
 _Cite_:
 
