--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 B - 6294379.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 B - 6294379.md
@@ -10,16 +10,12 @@ par le titulaire de l'attestation.
 
 _Cite_:
 
-  - Loi n°84-1208 1984-12-29 art. 30 Finances pour 1985
+  - Loi n°84-1208 DE FINANCES POUR 1985
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°94-764 du 30 août 1994 - art. 1 () JORF 2 septembre 1994
+  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 202 C (M)
-
-**Liens**:
-
-  - HISTO: Edition du 2 septembre 1994
+  - Code général des impôts, annexe 2, CGIAN2. - art. 202 C (V)
