--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 D - 6294382.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 D - 6294382.md
@@ -10,10 +10,6 @@ _Cite_:
 
   - CGIAN2 202 A à 202 C
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°94-764 du 30 août 1994 - art. 1 () JORF 2 septembre 1994
-
-**Liens**:
-
-  - HISTO: Edition du 2 septembre 1994
+  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
