--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 C - 6294380.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 C - 6294380.md
@@ -15,10 +15,10 @@ publiques dont relève le titulaire.
 
 _Modifié par_:
 
-  - Décret n°2012-430 du 29 mars 2012 - art. 15
+  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 202 A
-  - Code général des impôts, annexe 2, CGIAN2. - art. 202 B
+  - Code général des impôts, annexe 2, CGIAN2. - art. 202 A (M)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 202 B (V)
   - Code du travail - art. L6351-6
