--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 284 - 6294703.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 284 - 6294703.md
@@ -1,23 +1,18 @@
 # Article 284
 
-A la demande de l'administration, les fournisseurs agréés communiquent, par voie dématérialisée auprès de la direction
-générale des douanes et droits indirects, les prix de vente au détail des tabacs manufacturés, pour chacun de leurs produits
-par marque et dénomination commerciale.
+L'administration établit, chaque année, un calendrier comportant six campagnes d'homologation des prix de vente au détail des
+tabacs manufacturés, selon des intervalles qui ne peuvent dépasser trois mois.
 
-Les prix sont homologués par arrêté conjoint du ministre chargé du budget et du ministre chargé de la santé et publiés au
-Journal officiel de la République française.
+A la demande de l'administration, les fabricants de tabacs manufacturés lui communiquent, par voie dématérialisée, soit
+directement, soit par l'intermédiaire des fournisseurs agréés, les prix de vente au détail des tabacs manufacturés, pour
+chacun de leurs produits, par marque et dénomination commerciale.
 
-**Nota:**
-
-Conformément à la décision du Conseil d'Etat nos 405705, 405767 du 7 février 2018, Article 1 : Le décret du 7 juin 2016 est
-annulé, d’une part, en tant qu’il n’a pas fixé la fréquence selon laquelle, au cours de l’année civile, l’administration
-sollicite, aux fins d’homologation, la communication des prix des produits du tabac et le délai maximal dans lequel elle
-homologue les prix ainsi communiqués et, d’autre part, en tant qu’il ne permet pas aux fabricants de produits du tabac de
-communiquer directement leurs prix à l’administration. Les décisions implicites de rejet des recours gracieux et de refus
-d’abroger qui ont été opposées aux requérantes sont annulées dans la même mesure.
+Les prix sont homologués par arrêté conjoint du ministre chargé du budget et du ministre chargé de la santé, dans un délai
+maximal de trois mois à compter du premier jour d'ouverture de l'application informatique dédiée aux dépôts des demandes
+d'homologation. Ils sont publiés au Journal officiel de la République française.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2016-757 du 7 juin 2016 - art. 1
+  - Décret n°2018-292 du 20 avril 2018 - art. 1
