--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 95 T - 6293956.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 95 T - 6293956.md
@@ -2,72 +2,56 @@
 
 I. Les contribuables qui bénéficient de la réduction d'impôt prévue au I de l'article 199 undecies B du code général des
 impôts doivent joindre à la déclaration des revenus de l'année au titre de laquelle la réduction d'impôt est pratiquée un
-état faisant apparaître pour chaque investissement à raison duquel elle est pratiquée : 
+état faisant apparaître pour chaque investissement à raison duquel elle est pratiquée :
 
 a) Le nom et l'adresse du siège social de l'entreprise propriétaire de l'investissement ou, lorsque ce dernier fait l'objet
 d'un contrat de crédit-bail, de celle qui en est locataire, ainsi que le chiffre d'affaires de l'entreprise qui exploite
 l'investissement, apprécié selon les modalités définies au premier alinéa du I de l'article 199 undecies B du code général
-des impôts ; 
+des impôts ;
 
 b) S'il y a lieu, le pourcentage des droits aux résultats détenus directement ou indirectement par le contribuable dans la
-société ou le groupement propriétaire de l'investissement ; 
+société ou le groupement propriétaire de l'investissement ;
 
-c) La nature précise de l'investissement ; 
+c) La nature précise de l'investissement ;
 
 d) Le prix de revient hors taxe de l'investissement, la valeur réelle des biens remplacés et le montant des aides publiques
-obtenues ou demandées et non encore accordées pour son financement ; 
+obtenues ou demandées et non encore accordées pour son financement ;
 
 e) La date à laquelle l'investissement a été mis en service ou, en cas de construction ou d'acquisition d'un immeuble à
 construire, celle à laquelle les fondations sont achevées, ou, s'il s'agit d'un bien faisant l'objet d'un contrat de crédit-
-bail, celle à laquelle il a été mis à la disposition de l'entreprise ; 
+bail, celle à laquelle il a été mis à la disposition de l'entreprise ;
 
-f) La ou les dates de décision d'octroi des aides publiques ; 
+f) La ou les dates de décision d'octroi des aides publiques ;
 
-g) Le nom, l'adresse et la nature de l'activité de l'établissement dans lequel l'investissement est exploité ; 
+g) Le nom, l'adresse et la nature de l'activité de l'établissement dans lequel l'investissement est exploité ;
 
-h) S'il y a lieu, la copie de la décision d'agrément. 
+h) S'il y a lieu, la copie de la décision d'agrément.
 
-II. Les contribuables qui bénéficient des dispositions du I bis de l'article 199 undecies B du code général des impôts
-doivent joindre à la déclaration des revenus de chaque année au titre de laquelle l'imputation du déficit sur le revenu
-global est pratiquée un état fourni par la société propriétaire de l'hôtel, de la résidence de tourisme ou du village de
-vacances classés indiquant : 
-
-a) Le montant global de l'investissement ; 
-
-b) Le montant des travaux de rénovation et de réhabilitation ayant ouvert droit à la réduction d'impôt prévue au dix-huitième
-alinéa du I de l'article 199 undecies B ; 
-
-c) Le pourcentage de leurs droits aux résultats de la société ; 
-
-d) Le montant global de la quote-part de résultat correspondant à ces droits ; 
-
-e) Le montant de la quote-part de déficit imputable sur le revenu global en application du I bis de l'article 199 undecies
-B. 
+II. (Périmé).
 
 III. Les sociétés propriétaires d'un hôtel, d'une résidence de tourisme ou d'un village de vacances classés qui ont fait
 l'objet de travaux de rénovation et de réhabilitation ayant ouvert droit au profit de leurs associés à la réduction d'impôt
 prévue au dix-huitième alinéa du I de l'article 199 undecies B du code général des impôts doivent joindre à leur déclaration
 de résultats, lorsque l'hôtel, la résidence de tourisme ou le village de vacances classés est donné en location dans les
-conditions prévues au vingt-sixième alinéa du I de l'article 199 undecies B, un état indiquant : 
+conditions prévues au vingt-sixième alinéa du I de l'article 199 undecies B, un état indiquant :
 
-a) Le montant global de l'investissement ; 
+a) Le montant global de l'investissement ;
 
 b) Le montant des travaux de rénovation et de réhabilitation ayant ouvert droit au profit des associés à la réduction d'impôt
-prévue au dix-huitième alinéa du I de l'article 199 undecies B ; 
+prévue au dix-huitième alinéa du I de l'article 199 undecies B ;
 
-c) Le montant du déficit imputable sur le revenu global des associés en application du I bis de l'article 199 undecies B ; 
+c) (Périmé) ;
 
 d) La liste des associés mentionnant leurs noms et adresses ainsi que le pourcentage de leurs droits aux résultats de la
-société ; 
+société ;
 
-e) Le montant de la quote-part de déficit imputable sur le revenu global de chaque associé en application du I bis de
-l'article 199 undecies B.
+e) (Périmé).
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2015-919 du 27 juillet 2015 - art. 1
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cite_:
 
