--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 1 B - 6293660.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 1 B - 6293660.md
@@ -3,30 +3,34 @@
 L'option prévue au f du 1° du I de l'article 31 du code général des impôts doit être formulée dans une note établie
 conformément à un modèle fixé par l'administration qui comporte l'adresse et la date d'acquisition ou d'achèvement de
 l'immeuble concerné, la date de sa première location, le cas échéant, ainsi que les modalités de décompte de la déduction au
-titre de l'amortissement. 
+titre de l'amortissement.
 
-Ce document doit être accompagné des justificatifs suivants : 
+Ce document doit être accompagné des justificatifs suivants :
 
 1° Pour les immeubles que le contribuable fait construire, une copie de la déclaration d'ouverture de chantier mentionnée à
-l'article R. 421-40 du code de l'urbanisme et de la déclaration d'achèvement des travaux accompagnées des pièces attestant de
-leur réception en mairie ; 
+l'article R. * 424-16 du code de l'urbanisme et de la déclaration d'achèvement des travaux accompagnées des pièces attestant
+de leur réception en mairie ;
 
 2° Pour les locaux que le contribuable transforme en logement, une copie de la déclaration d'achèvement des travaux,
 accompagnée d'une pièce attestant de sa réception en mairie et d'une note précisant la nature de l'affectation précédente des
-locaux. 
+locaux.
 
 Pour les immeubles transmis à titre gratuit, l'option des héritiers, légataires ou donataires doit comporter la date
-d'acquisition de l'immeuble par le précédent propriétaire ainsi que l'identité et l'adresse de ce dernier. 
+d'acquisition de l'immeuble par le précédent propriétaire ainsi que l'identité et l'adresse de ce dernier.
 
 Chaque année, le contribuable joint à la déclaration de ses revenus un état établi conformément à un modèle fixé par
 l'administration et faisant apparaître pour chaque logement le détail du calcul du montant de la déduction pratiquée au titre
 de l'amortissement.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 9 du décret n° 2007-18 du 5 janvier 2007.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°96-632 du 16 juillet 1996 - art. 2 () JORF 18 juillet 1996
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cité par_:
 
@@ -34,5 +38,5 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 31 (V)
-  - Code de l'urbanisme - art. R*421-40 (Ab)
+  - Code général des impôts, CGI. - art. 31 (M)
+  - Code de l'urbanisme
