--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 142 - 6294136.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 142 - 6294136.md
@@ -1,21 +1,22 @@
 # Article 142
 
 Sous réserve de la régularisation prévue à l'article 143, le montant de la majoration de la taxe sur les salaires visée à
-l'article 231 du code général des impôts est déterminé, pour chaque mois, à raison de : 
+l'article 231 du code général des impôts est déterminé, pour chaque mois, à raison de :
 
 4,25 % de la fraction des traitements et salaires individuels, payés au cours du mois, qui est comprise entre les douzièmes
-des seuils d'application des taux majorés de 8,50 % et de 13,60 % figurant à l'article 231 du code général des impôts ; 
+des seuils d'application des taux majorés de 8,50 % et de 13,60 % figurant à l'article 231 du code général des impôts ;
 
-9,35 % de la fraction de ces traitements et salaires qui est comprise entre les douzièmes des seuils d'application des taux
-majorés de 13,60 % et de 20 % figurant au même article ; 
-
-15,75 % de la fraction de ces traitements et salaires dépassant le douzième du seuil d'application du taux majoré de 20 %
-précité. 
+9,35 % de la fraction de ces traitements et salaires dépassant le douzième du seuil d'application du taux majoré de 13,60 %
+figurant au même article.
 
 En ce qui concerne les rémunérations qui sont payées suivant une périodicité ou à des intervalles excédant un mois, l'impôt
 peut être déterminé en ramenant au mois le paiement imposable et en appliquant au montant des droits, calculé conformément
-aux dispositions des premier à quatrième alinéas sur la somme ainsi obtenue, la proportion qui existe entre la période à
+aux dispositions des premier à troisième alinéas sur la somme ainsi obtenue, la proportion qui existe entre la période à
 laquelle s'applique le paiement et le mois.
+
+**Nota:**
+
+Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 90-I).
 
 **Liens relatifs à cet article**
 
@@ -25,7 +26,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2013-265 du 28 mars 2013 - art. 2
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cité par_:
 
@@ -35,4 +36,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 231 (V)
+  - Code général des impôts, CGI. - art. 231 (VT)
