--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 143 - 6294139.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 143 - 6294139.md
@@ -5,33 +5,30 @@ effectuée par année.
 
 Pour cette régularisation, le montant des droits exigibles au titre de la majoration de la taxe sur les salaires est
 déterminé en appliquant le taux de 4,25 % à la fraction de la rémunération effectivement allouée à chaque salarié au cours de
-l'année civile, qui est comprise entre 7 721 € et 15 417 €, le taux de 9,35 % à la fraction comprise entre 15 417 € et 152
-279 € et le taux de 20 % à la fraction excédant 152 279 € et en multipliant le chiffre ainsi déterminé par le rapport qui
-existe entre le montant de la rémunération qui a été payée pendant la période d'application de la majoration et le montant
-total de la rémunération annuelle.
+l'année civile, qui est comprise entre 7 799 € et 15 572 € et le taux de 9,35 % à la fraction excédant 15 572 € et en
+multipliant le chiffre ainsi déterminé par le rapport qui existe entre le montant de la rémunération qui a été payée pendant
+la période d'application de la majoration et le montant total de la rémunération annuelle.
 
 Les droits dus ne peuvent toutefois excéder le chiffre obtenu en appliquant au montant de la rémunération dont chaque salarié
 a bénéficié au cours de la période d'application de la majoration les taux de :
 
-4,25 % à la fraction de cette rémunération qui, ajustée à l'année, est comprise entre 7 721 € et 15 417 € ;
+4,25 % à la fraction de cette rémunération qui, ajustée à l'année, est comprise entre 7 799 € et 15 572 € ;
 
-9,35 % à la fraction de cette rémunération qui, ajustée à l'année, est comprise entre 15 417 € et 152 279 € ;
-
-15,75 % à la fraction de cette rémunération qui, ajustée à l'année, dépasse 152 279 €.
+9,35 % à la fraction de cette rémunération qui, ajustée à l'année, dépasse 15 572 €.
 
 **Nota:**
 
-Modification effectuée en conséquence de l'article 2-I-2° la loi n° 2016-1917 du 29 décembre 2016.
+Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 2-2° et 90-I).
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2017-698 du 2 mai 2017 - art. 2
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cité par_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 142 (M)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 142 (V)
 
 _Cite_:
 
