--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
@@ -2,234 +2,236 @@
 
 Les directeurs interrégionaux des douanes et droits indirects ou, en Guadeloupe, en Guyane, à La Réunion et à Mayotte, les
 directeurs régionaux des douanes et droits indirects sont compétents, dans le cadre de leurs attributions, pour prendre les
-décisions administratives individuelles suivantes : 
+décisions administratives individuelles suivantes :
 
 1° Fixation ou révision de taux annuels de déchets ou de pertes observés en cours de fabrication ou de transformation
 d'alcools et de boissons alcooliques accordés aux entrepositaires agréés par entrepôt suspensif de droits d'accises, prévues
-par le premier alinéa du 2° du 1 du I de l'article 302 D du code général des impôts et l'article 111-00 B de l'annexe III au
-même code ; 
+par le premier alinéa du 2° du 1 du I de l'article 302 D du code général des impôts ;
 
-2° Autorisation du procédé de dénaturation de l'alcool prévue au b du I de l'article 302 D bis du code général des impôts ; 
+2° Autorisation du procédé de dénaturation de l'alcool prévue au b du I de l'article 302 D bis du code général des impôts ;
 
-3° (abrogé) ; 
+3° (abrogé) ;
 
 4° Dispense de cautionnement en matière de contributions indirectes prévue au 2 du III de l'article 302 D, au V de l'article
 302 G, au premier alinéa du I de l'article 302 H ter, à l'article 302 J du code général des impôts et aux articles 286 N de
-l'annexe II, 111-0 C et 111-0 D de l'annexe III au même code ; 
+l'annexe II, 111-0 C et 111-0 D de l'annexe III au même code ;
 
 5° Retrait de l'agrément accordé à l'entrepositaire agréé en cas de violation de ses obligations, de défaillance de la
 caution ou de dénonciation par cette caution de son engagement, prévu au V de l'article 302 G du code général des impôts, au
 IX de l'article 286 I et au XI de l'article 286 J de l'annexe II et aux articles 111-0 C et 111-0 D de l'annexe III au même
-code ; 
+code ;
 
 6° Remboursement et compensation des droits d'accises, prévu au IV de l'article 302 G du code général des impôts et à
-l'article 286 M de l'annexe II au même code ; 
+l'article 286 M de l'annexe II au même code ;
 
 7° Autorisation de décharges de manquants pour les pertes de marchandises constatées lors de livraisons d'alcool, de boissons
 alcooliques ou de tabacs manufacturés en suspension de droits d'accises, à destination d'un entrepositaire agréé ou d'un
-destinataire enregistré, prévue par l'article 302 K du code général des impôts ; 
+destinataire enregistré, prévue par l'article 302 K du code général des impôts ;
 
 8° Autorisation préalable des personnes qui désirent importer, acquérir à titre gratuit ou onéreux, obtenir en location,
 faire réparer ou transformer un ou plusieurs appareils ou portions d'appareils propres à la distillation, à la fabrication ou
 au repassage d'eaux-de-vie ou d'esprits, prévue par l'article 306 du code général des impôts et l'article 50 C de l'annexe IV
-au même code ; 
+au même code ;
 
-9° Dispense de la formalité de scellement, prévue par l'article 309 du code général des impôts ; 
+9° Dispense de la formalité de scellement, prévue par l'article 309 du code général des impôts ;
 
 10° Délivrance de permis de circulation pour les alambics utilisés par les loueurs d'alambics, prévue par les articles 311
-bis, 327 et 328 du code général des impôts ; 
+bis, 327 et 328 du code général des impôts ;
 
-11° (supprimé) ; 
+11° (supprimé) ;
 
-12° (supprimé) ; 
+12° (supprimé) ;
 
 13° Admission en décharge des quantités d'alcool ou de boissons alcooliques en cas de pertes accidentelles, prévue au
-troisième alinéa de l'article 111-00 A de l'annexe III au code général des impôts ; 
+deuxième alinéa de l'article 50-0 J de l'annexe IV au code général des impôts ;
 
-14° (supprimé) ; 
+14° (supprimé) ;
 
 15° Attribution et retrait du numéro d'identification des intermédiaires, prévus au 2° du II de l'article 111-0 E de l'annexe
 III au code général des impôts et attribution et retrait du numéro d'identification des utilisateurs d'alcools et de boissons
-alcooliques en exonération de droits d'accises, prévus au 1° du I de l'article 111-0F de la même annexe ; 
+alcooliques en exonération de droits d'accises, prévus au 1° du I de l'article 111-0F de la même annexe ;
 
-16° (supprimé) ; 
+16° (supprimé) ;
 
 17° Autorisation donnée aux entrepositaires agréés mentionnés à l'article 302 G du code général des impôts et des débitants
 de boissons mentionnés à l'article 502 du même code, d'utiliser leurs factures ou tout autre document commercial, en lieu et
 place des documents d'accompagnement mentionnés aux articles 302 M bis et 302 M ter du code précité, prévue par le II de
-l'article 111 H bis de l'annexe III au code général des impôts ; 
+l'article 111 H bis de l'annexe III au code général des impôts ;
 
 18° Agrément des procédés de dénaturation des essences d'absinthe et produits assimilés, prévu par le premier alinéa de
-l'article 178 P de l'annexe III au code général des impôts ; 
+l'article 178 P de l'annexe III au code général des impôts ;
 
-19° Dispense des formalités à la circulation, prévue par l'article 178 AA de l'annexe III au code général des impôts ; 
+19° Dispense des formalités à la circulation, prévue par l'article 178 AA de l'annexe III au code général des impôts ;
 
 20° Autorisation de procéder à la vérification de la légalité du titre d'un ouvrage en or, argent ou platine marqué d'un
-poinçon de garantie, prévue à l'article 207 de l'annexe III au code général des impôts ; 
+poinçon de garantie, prévue à l'article 207 de l'annexe III au code général des impôts ;
 
-21° à 25° (supprimés) ; 
+21° à 25° (supprimés) ;
 
 26° Autorisation des entrepositaires agréés de rattacher un ou plusieurs chais ou locaux au site d'exploitation lorsqu'ils
 sont situés en dehors des limites fixées au I de l'article 50-00 B de l'annexe IV au code général des impôts, prévue par le
-III du même article ; 
+III du même article ;
 
 27° Délivrance du numéro d'agrément de la personne responsable de l'embouteillage du produit prévue au a de l'article 54-0 C
-de l'annexe IV au code général des impôts ; 
+de l'annexe IV au code général des impôts ;
 
 28° Autorisation donnée à un négociant d'embouteiller des boissons alcooliques pour le compte d'un ou de plusieurs autres
-entrepositaires agréés, prévue par le dernier alinéa de l'article 54-0 C de l'annexe IV au code général des impôts ; 
+entrepositaires agréés, prévue par le dernier alinéa de l'article 54-0 C de l'annexe IV au code général des impôts ;
 
 29° Agrément d'un type de capsule représentative de droit, prévu par l'article 54-0 G de l'annexe IV au code général des
-impôts ; 
+impôts ;
 
 30° Agrément de compteur équipant les machines à fabriquer les marques fiscales représentatives de droits, prévu par
-l'article 54-0 I de l'annexe IV au code général des impôts ; 
+l'article 54-0 I de l'annexe IV au code général des impôts ;
 
 31° Octroi des dérogations à l'emploi obligatoire des capsules fiscales pour le conditionnement des vins, prévu par le
-deuxième alinéa de l'article 54-0 U de l'annexe IV au code général des impôts ; 
+deuxième alinéa de l'article 54-0 U de l'annexe IV au code général des impôts ;
 
 32° Autorisation donnée aux entrepositaires agréés d'apposer eux-mêmes, sur les capsules qu'ils utilisent, la marque fiscale
 et les autres mentions visées au 2° du II de l'article 164 AM de l'annexe IV au code général des impôts, prévue par l'article
-54-0 V de l'annexe IV au code général des impôts ; 
+54-0 V de l'annexe IV au code général des impôts ;
 
 33° Agrément des machines destinées à apposer la marque fiscale et les autres mentions visées au 2° du II de l'article 164 AM
-de l'annexe IV au CGI, prévu par le deuxième alinéa de l'article 54-0 V de l'annexe IV au code général des impôts ; 
+de l'annexe IV au CGI, prévu par le deuxième alinéa de l'article 54-0 V de l'annexe IV au code général des impôts ;
 
 34° Autorisation de restitution ou de remise des droits et taxes afférents aux bouteilles ou récipients défectueux ou cassés,
-prévue par le deuxième alinéa de l'article 54-0 Z de l'annexe IV au code général des impôts ; 
+prévue par le deuxième alinéa de l'article 54-0 Z de l'annexe IV au code général des impôts ;
 
 35° Accord de restitution ou de remise des droits et taxes après constatation par le service des douanes et droits indirects
 de la preuve de la sortie du produit du territoire de l'Union européenne ou après présentation d'un des documents mentionnés
 aux articles 302 M, 302 M bis et 302 M ter du code général des impôts, prévu par le dernier alinéa de l'article 54-0 Z de
-l'annexe IV au code général des impôts ; 
+l'annexe IV au code général des impôts ;
 
 36° Habilitation à répartir les capsules collectives représentatives des droits destinées aux récoltants, prévue par le
-premier alinéa de l'article 54-0 BW de l'annexe IV au code général des impôts ; 
+premier alinéa de l'article 54-0 BW de l'annexe IV au code général des impôts ;
 
 37° Autorisation de percevoir le droit de circulation par les personnes habilitées à répartir les capsules collectives
 représentatives des droits destinées aux récoltants, prévue par le troisième alinéa de l'article 54-0 BW de l'annexe IV au
-code général des impôts ; 
+code général des impôts ;
 
 38° Autorisation d'employer des empreintes fiscales en lieu et place de vignettes, prévue par le II de l'article 54 A de
-l'annexe IV au code général des impôts ; 
+l'annexe IV au code général des impôts ;
 
-39° à 47° (supprimés) ; 
+39° à 47° (supprimés) ;
 
 48° Mise en demeure adressée au comité de direction d'un cercle de jeu de ne pas maintenir en fonction un préposé n'arrivant
 pas à assurer de manière satisfaisante la concordance entre les sommes trouvées dans la cagnotte et la valeur des tickets
-détachés, prévue par le deuxième alinéa de l'article 151 de l'annexe IV au code général des impôts ; 
+détachés, prévue par le deuxième alinéa de l'article 151 de l'annexe IV au code général des impôts ;
 
 49° Autorisation d'utiliser des machines à timbrer, prévue au premier alinéa de l'article 164 AD bis de l'annexe IV au code
-général des impôts ; 
+général des impôts ;
 
 50° Autorisation de déplacement de la machine à timbrer en dehors de l'établissement désigné comme lieu d'exploitation,
-prévue à la fin du deuxième alinéa de l'article 164 AD bis au code général des impôts ; 
+prévue à la fin du deuxième alinéa de l'article 164 AD bis au code général des impôts ;
 
 51° Autorisation de mise en place ou d'installation, chez les utilisateurs, de matériels et logiciels mentionnée à l'article
 164 AM de l'annexe IV au code général des impôts, prévue au III de l'article 164 AP et au I de l'article 164 AU de la même
-annexe ; 
+annexe ;
 
 52° Autorisation de déplacement des matériels ou logiciels mentionnés à l'article 164 AM de l'annexe IV au code général des
-impôts en dehors de l'établissement désigné comme le lieu d'exploitation, prévue au I de l'article 164 AU de la même
-annexe ; 
+impôts en dehors de l'établissement désigné comme le lieu d'exploitation, prévue au I de l'article 164 AU de la même annexe ;
 
 53° Habilitation des usagers à apposer, à l'aide de leurs matériels ou logiciels, les marques fiscales sur des capsules dont
 ils font usage pour le compte de personnes pour lesquelles ils sont autorisés à embouteiller les vins, autres boissons
-fermentées, produits intermédiaires et alcools, prévue au VI de l'article 164 AU de l'annexe IV au code général des impôts ; 
+fermentées, produits intermédiaires et alcools, prévue au VI de l'article 164 AU de l'annexe IV au code général des impôts ;
 
 54° Révocation de l'autorisation donnée aux usagers de matériels ou de logiciels mentionnée au I de l'article 164 AU de
-l'annexe IV, prévue à l'article 164 AW de la même annexe ; 
+l'annexe IV, prévue à l'article 164 AW de la même annexe ;
 
-55° (supprimé) ; 
+55° (supprimé) ;
 
 56° Délivrance et retrait de l'agrément d'acheteur-revendeur de tabacs manufacturés prévu à l'article 568 du code général des
-impôts ; 
+impôts ;
 
 57° Délivrance des certificats d'exportation préalable de rhums traditionnels des départements d'outre-mer, en application de
-l'article 144 bis de l'annexe III au code général des impôts et de l'article 52 quater de l'annexe IV au même code ; 
+l'article 144 bis de l'annexe III au code général des impôts et de l'article 52 quater de l'annexe IV au même code ;
 
 58° Autorisation d'attester la garantie du titre par marquage au laser prévue par le b de l'article 523 du code général des
 impôts, les articles 275 bis C et 275 ter B de l'annexe II au même code et les articles 56 J duodecies et 56 J terdecies de
-l'annexe IV au même code ; 
+l'annexe IV au même code ;
 
 59° Demande de procéder à un second essai en cas de contestation sur le titre, en application du premier alinéa de l'article
-530 du code général des impôts et de l'article 203 de l'annexe III au même code ; 
+530 du code général des impôts et de l'article 203 de l'annexe III au même code ;
 
 60° Conclusion des conventions habilitant les professionnels à attester eux-mêmes la garantie du titre, en application du I
-de l'article 535 du code général des impôts et de l'article 275 bis C de l'annexe II au même code ; 
+de l'article 535 du code général des impôts et de l'article 275 bis C de l'annexe II au même code ;
 
 61° Autorisation de modifier les conditions auxquelles était subordonnée la conclusion de la convention des professionnels
 habilités à attester eux-mêmes la garantie du titre, en application du I de l'article 535 du code général des impôts et de
-l'article 275 bis D de l'annexe II au même code ; 
+l'article 275 bis D de l'annexe II au même code ;
 
 62° Décision de résiliation des conventions habilitant les professionnels à attester eux-mêmes la garantie du titre, en
 application du deuxième alinéa du I de l'article 535 du code général des impôts et du deuxième alinéa de l'article 275 bis K
-de l'annexe II au même code ; 
+de l'annexe II au même code ;
 
 63° Autorisation de refonte d'ouvrages aux titres légaux destinés à une commercialisation en dehors du territoire français
 sans apposition des poinçons réglementaires, en application de l'article 543 du code général des impôts et de l'article 208
 de l'annexe I au même code.
 
+**Nota:**
+
+Modification effectuée en conséquence du décret n° 2017-1284 du 9 août 2017 (art. 1er).
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2016-1584 du 24 novembre 2016 - art. 2
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cite_:
 
-  - Code général des impôts annexe 1, CGIAN1. - art. 208 (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis C (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis D (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis K (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 275 ter B (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 I (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 J (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 M (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 286 N (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111 H bis (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 E (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 F (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 A (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 B (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 C (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 144 bis (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 178 AA (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 178 P (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 203 (V)
-  - Code général des impôts, annexe 3, CGIAN3. - art. 207 (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 151 (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AD bis (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AM (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AP (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AU (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AW (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 50 C (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 50-00 B (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 52 quater (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54 A (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 BW (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 C (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 G (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 I (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 U (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 V (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 Z (V)
-  - Code général des impôts, annexe 4, CGIAN4. - art. 56 J duodecies (V)
-  - Code général des impôts, CGI. - art. 302 D (V)
-  - Code général des impôts, CGI. - art. 302 D bis (VT)
-  - Code général des impôts, CGI. - art. 302 G (V)
-  - Code général des impôts, CGI. - art. 302 H ter (V)
-  - Code général des impôts, CGI. - art. 302 J (V)
-  - Code général des impôts, CGI. - art. 302 K (V)
-  - Code général des impôts, CGI. - art. 302 M (V)
-  - Code général des impôts, CGI. - art. 302 M bis (V)
-  - Code général des impôts, CGI. - art. 302 M ter (V)
-  - Code général des impôts, CGI. - art. 306 (V)
-  - Code général des impôts, CGI. - art. 309 (V)
-  - Code général des impôts, CGI. - art. 311 bis (V)
-  - Code général des impôts, CGI. - art. 327 (V)
-  - Code général des impôts, CGI. - art. 523 (V)
-  - Code général des impôts, CGI. - art. 530 (V)
-  - Code général des impôts, CGI. - art. 535 (V)
-  - Code général des impôts, CGI. - art. 568 (VT)
+  - Code général des impôts annexe 1, CGIAN1. - art. 208
+  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis C
+  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis D
+  - Code général des impôts, annexe 2, CGIAN2. - art. 275 bis K
+  - Code général des impôts, annexe 2, CGIAN2. - art. 275 ter B
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 I
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 J
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 M
+  - Code général des impôts, annexe 2, CGIAN2. - art. 286 N
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111 H bis
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 E
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-0 F
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 A
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 B
+  - Code général des impôts, annexe 3, CGIAN3. - art. 111-00 C
+  - Code général des impôts, annexe 3, CGIAN3. - art. 144 bis
+  - Code général des impôts, annexe 3, CGIAN3. - art. 178 AA
+  - Code général des impôts, annexe 3, CGIAN3. - art. 178 P
+  - Code général des impôts, annexe 3, CGIAN3. - art. 203
+  - Code général des impôts, annexe 3, CGIAN3. - art. 207
+  - Code général des impôts, annexe 4, CGIAN4. - art. 151
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AD bis
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AM
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AP
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AU
+  - Code général des impôts, annexe 4, CGIAN4. - art. 164 AW
+  - Code général des impôts, annexe 4, CGIAN4. - art. 50 C
+  - Code général des impôts, annexe 4, CGIAN4. - art. 50-00 B
+  - Code général des impôts, annexe 4, CGIAN4. - art. 52 quater
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54 A
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 BW
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 C
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 G
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 I
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 U
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 V
+  - Code général des impôts, annexe 4, CGIAN4. - art. 54-0 Z
+  - Code général des impôts, annexe 4, CGIAN4. - art. 56 J duodecies
+  - Code général des impôts, CGI. - art. 302 D
+  - Code général des impôts, CGI. - art. 302 D bis
+  - Code général des impôts, CGI. - art. 302 G
+  - Code général des impôts, CGI. - art. 302 H ter
+  - Code général des impôts, CGI. - art. 302 J
+  - Code général des impôts, CGI. - art. 302 K
+  - Code général des impôts, CGI. - art. 302 M
+  - Code général des impôts, CGI. - art. 302 M bis
+  - Code général des impôts, CGI. - art. 302 M ter
+  - Code général des impôts, CGI. - art. 306
+  - Code général des impôts, CGI. - art. 309
+  - Code général des impôts, CGI. - art. 311 bis
+  - Code général des impôts, CGI. - art. 327
+  - Code général des impôts, CGI. - art. 523
+  - Code général des impôts, CGI. - art. 530
+  - Code général des impôts, CGI. - art. 535
+  - Code général des impôts, CGI. - art. 568
