--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
@@ -3,94 +3,98 @@
 I. – Les héritiers, donataires ou légataires d'actions ou de parts de sociétés mentionnées à l'article 787 B du code général
 des impôts, qui demandent à bénéficier des dispositions de cet article, doivent remettre au service des impôts compétent pour
 enregistrer la déclaration de succession, de don manuel ou l'acte de donation, dans les délais prévus pour cet
-enregistrement, les documents suivants : 
+enregistrement, les documents suivants :
 
 1° Une copie de l'acte enregistré constatant l'engagement collectif de conservation en cours, mentionné au premier alinéa du
 a de l'article 787 B précité, signé par le défunt ou le donateur avec un ou plusieurs autres associés et comportant les
-éléments suivants : 
+éléments suivants :
 
-a) L'identité du ou des associés ayant souscrit avec le défunt ou le donateur l'engagement collectif de conservation ; 
+a) L'identité du ou des associés ayant souscrit avec le défunt ou le donateur l'engagement collectif de conservation ;
 
 b) Le nombre de titres que les personnes mentionnées au premier alinéa du a ont soumis ensemble à l'engagement collectif de
-conservation ainsi que le pourcentage y afférents des droits mentionnés au b de l'article 787 B ; 
+conservation ainsi que le pourcentage y afférents des droits mentionnés au b de l'article 787 B ;
 
 c) Le nombre de titres détenus par chaque associé, au jour de l'enregistrement de l'acte, et soumis à l'engagement collectif
-de conservation ; 
+de conservation ;
 
 d) L'identité de la personne ayant souscrit l'engagement prévu au premier alinéa du a de l'article 787 B qui satisfait à la
-condition prévue au d du même article ; 
+condition prévue au d du même article ;
 
 2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement collectif de conservation certifiant
-que : 
+que :
 
 a) L'engagement collectif de conservation souscrit par le défunt ou le donateur, pour lui et ses ayants cause à titre
 gratuit, avec un ou plusieurs autres associés, d'une durée d'au moins deux ans, est en cours au jour de la transmission à
-titre gratuit ; 
+titre gratuit ;
 
 b) Cet engagement a été respecté pour le pourcentage et le nombre de titres prévus au b du 1° lors de sa souscription
-jusqu'au jour de la transmission à titre gratuit ; 
+jusqu'au jour de la transmission à titre gratuit ;
 
 c) Ses statuts limitent les droits de l'usufruitier dans les conditions prévues par l'avant-dernier alinéa de l'article 787 B
-précité en cas de donation de titres consentie avec réserve d'usufruit. 
+précité en cas de donation de titres consentie avec réserve d'usufruit.
 
 3° Dans le cas où le régime, prévu par l'article 787 B, concerne les titres d'une société interposée entre le redevable et la
 société signataire de l'engagement collectif de conservation, une attestation de la société interposée précisant le nombre de
 titres qu'elle détient dans la société signataire de l'engagement collectif de conservation à la date de la signature de
-celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée. 
+celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée.
 
 II. – Lorsque l'engagement collectif de conservation est conclu dans les conditions mentionnées au deuxième alinéa du a de
 l'article 787 B, les héritiers ou légataires qui demandent à bénéficier de l'exonération doivent remettre au service des
 impôts compétent pour enregistrer la déclaration de succession, dans les délais prévus pour cet enregistrement, les documents
-suivants : 
+suivants :
 
 1° Une copie de l'acte enregistré constatant l'engagement collectif de conservation, mentionné au deuxième alinéa du a de
 l'article 787 B, signé par le ou les héritiers ou légataires entre eux ou avec un ou plusieurs autres associés et comportant
-les éléments suivants : 
+les éléments suivants :
 
 a) L'identité du ou des associés ayant souscrit avec le ou les héritiers ou légataires l'engagement collectif de
-conservation ; 
+conservation ;
 
 b) Le nombre de titres que les personnes mentionnées au deuxième alinéa du a de l'article 787 B ont soumis ensemble à
-l'engagement collectif de conservation, ainsi que le pourcentage y afférent des droits mentionnés au b du même article ; 
+l'engagement collectif de conservation, ainsi que le pourcentage y afférent des droits mentionnés au b du même article ;
 
 c) Le nombre de titres détenus par chaque personne mentionnée au deuxième alinéa du a de l'article 787 B, au jour de
-l'enregistrement de l'acte, et soumis à l'engagement collectif de conservation ; 
+l'enregistrement de l'acte, et soumis à l'engagement collectif de conservation ;
 
 d) L'identité de la personne ayant souscrit l'engagement prévu au deuxième alinéa du a de l'article 787 B qui satisfait à la
-condition prévue au d du même article ; 
+condition prévue au d du même article ;
 
 2° Une attestation de la société dont les parts ou actions font l'objet de l'engagement collectif de conservation certifiant
 qu'il a été souscrit par le ou les héritiers ou légataires, pour lui et ses ayants cause à titre gratuit, entre eux ou avec
-un ou plusieurs autres associés pour une durée d'au moins deux ans ; 
+un ou plusieurs autres associés pour une durée d'au moins deux ans ;
 
 3° Dans le cas où le régime prévu par l'article 787 B précité concerne les titres d'une société interposée entre la personne
 et la société signataire de l'engagement collectif de conservation, une attestation de la société interposée précisant le
 nombre de titres qu'elle détient dans la société signataire de l'engagement collectif de conservation à la date de la
-signature de celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée. 
+signature de celui-ci et certifiant que, depuis cette date, cette participation est demeurée inchangée.
 
 III. – Lorsque l'engagement collectif est réputé acquis au sens des dispositions du septième alinéa de l'article 787 B
 précité, les héritiers, donataires ou légataires d'actions ou de parts de sociétés qui demandent à bénéficier du régime prévu
 par cet article doivent remettre au service des impôts compétent pour enregistrer la déclaration de succession, de don manuel
 ou l'acte de donation, dans les délais prévus pour cet enregistrement, une attestation de la société dont les parts ou
-actions sont transmises certifiant que : 
+actions sont transmises certifiant que :
 
 1° Le pourcentage des parts ou actions détenues par le défunt ou le donateur, seul ou avec son conjoint ou le partenaire avec
 lequel il est lié par un pacte civil de solidarité atteignait, au moment de la transmission à titre gratuit, les seuils
-prévus au premier alinéa du b de l'article 787 B précité ; 
+prévus au premier alinéa du b de l'article 787 B précité ;
 
 2° Le défunt, ou le donateur, ou son conjoint, ou le partenaire avec lequel il est lié par un pacte civil de solidarité,
 exerçait, au moment de la transmission à titre gratuit depuis deux ans au moins dans la société dont les titres sont
-transmis, son activité professionnelle principale ou l'une des fonctions énumérées au 1° de l'article 885 O bis du code
-général des impôts lorsque la société est soumise à l'impôt sur les sociétés ; 
+transmis, son activité professionnelle principale ou l'une des fonctions énumérées au 1° du 1 du III de l'article 975 du code
+général des impôts lorsque la société est soumise à l'impôt sur les sociétés ;
 
 3° Ses statuts limitent les droits de l'usufruitier dans les conditions prévues par l'avant-dernier alinéa de l'article 787 B
 précité en cas de donation de titres consentie avec réserve d'usufruit.
+
+**Nota:**
+
+Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 31-I A, B 34° et IX B 1).
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2009-1092 du 3 septembre 2009 - art. 1
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cité par_:
 
@@ -98,5 +102,5 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 787 B (V)
+  - Code général des impôts, CGI. - art. 787 B
   - Code général des impôts, CGI. - art. 885 O bis
