--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 P - 6293799.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 P - 6293799.md
@@ -1,19 +1,23 @@
 # Article 74-0 P
 
-Pour l'application du c du 2° du 3 du I de l'article 150-0 D ter du code général des impôts, la date à laquelle le cédant
-fait valoir ses droits à la retraite s'entend de la date à laquelle il entre en jouissance des droits qu'il a acquis dans le
+Pour l'application du c du 2° du II de l'article 150-0 D ter du code général des impôts, la date à laquelle le cédant fait
+valoir ses droits à la retraite s'entend de la date à laquelle il entre en jouissance des droits qu'il a acquis dans le
 régime obligatoire de base d'assurance vieillesse auquel il a été affilié à raison de ses fonctions de direction ou, s'il n'a
 été affilié auprès d'aucun régime obligatoire de base pour cette activité, dans le régime obligatoire de base d'assurance
-vieillesse auquel il a été affilié au titre de sa dernière activité. 
+vieillesse auquel il a été affilié au titre de sa dernière activité.
 
 Le contribuable produit à l'administration fiscale, sur sa demande, les pièces que lui a adressées son régime mentionné au
 premier alinéa, sur lesquelles figure la date prévue audit alinéa.
+
+**Nota:**
+
+Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 28-I-17° et VI C).
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2014-1223 du 21 octobre 2014 - art. 1
+  - Décret n°2018-500 du 20 juin 2018 - art. 3
 
 _Cite_:
 
