--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 310 I - 6295743.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 310 I - 6295743.md
@@ -2,102 +2,102 @@
 
 Les coefficients prévus au 1 du III de l'article 1496 du code général des impôts qui doivent être utilisés, à compter du 1er
 janvier 1979, jusqu'à la prochaine actualisation des valeurs locatives foncières des propriétés bâties pour la détermination
-de la base d'imposition à la taxe foncière sur les propriétés bâties des locaux d'habitation ou à usage professionnel loués
-sous le régime de la réglementation édictée par la loi n° 48-1360 du 1er septembre 1948 modifiée, sont fixés comme suit : 
+de la base d'imposition à la taxe foncière sur les propriétés bâties des locaux d'habitation loués sous le régime de la
+réglementation édictée par la loi n° 48-1360 du 1er septembre 1948 modifiée, sont fixés comme suit :
 
-<table cellpadding="0" align="center" width="680" border="1" cellspacing="0">
+<table align="center" cellspacing="0" cellpadding="0" border="1">
   <tbody>
     <tr>
-      <td width="529">
+      <td>
 
-CATÉGORIES 
-
-</td>
-      <td width="151">
-
-COEFFICIENT 
+CATÉGORIES
 
 </td>
-    </tr>
-    <tr>
-      <td valign="top" width="529">
+      <td>
 
-Catégorie II A 
-
-</td>
-      <td valign="top" width="151">
-
-2,83 
+COEFFICIENT
 
 </td>
     </tr>
     <tr>
-      <td valign="top" width="529">
+      <td>
 
-Catégorie II B 
-
-</td>
-      <td width="151" valign="top">
-
-2,49 
+Catégorie II A
 
 </td>
-    </tr>
-    <tr>
-      <td valign="top" width="529">
+      <td>
 
-Catégorie II C 
-
-</td>
-      <td width="151" valign="top">
-
-2,14 
+2,83
 
 </td>
     </tr>
     <tr>
-      <td width="529" valign="top">
+      <td>
 
-Catégorie III A 
-
-</td>
-      <td width="151" valign="top">
-
-1,93 
+Catégorie II B
 
 </td>
-    </tr>
-    <tr>
-      <td width="529" valign="top">
+      <td>
 
-Catégorie III B 
-
-</td>
-      <td width="151" valign="top">
-
-1,75 
+2,49
 
 </td>
     </tr>
     <tr>
-      <td valign="top" width="529">
+      <td>
 
-Catégorie IV 
+Catégorie II C
 
 </td>
-      <td width="151" valign="top">
+      <td>
 
-1,00 
+2,14
 
 </td>
     </tr>
     <tr>
-      <td width="529" valign="top">
+      <td>
 
-Catégorie des locaux soumis au régime du loyer forfaitaire de l'article 34 de la loi du 1er septembre 1948 
+Catégorie III A
 
 </td>
-      <td valign="top" width="151">
+      <td>
+
+1,93
+
+</td>
+    </tr>
+    <tr>
+      <td>
+
+Catégorie III B
+
+</td>
+      <td>
+
+1,75
+
+</td>
+    </tr>
+    <tr>
+      <td>
+
+Catégorie IV
+
+</td>
+      <td>
+
+1,00
+
+</td>
+    </tr>
+    <tr>
+      <td>
+
+Catégorie des locaux soumis au régime du loyer forfaitaire de l'article 34 de la loi du 1er septembre 1948
+
+</td>
+      <td>
 
 1,93
 
@@ -110,17 +110,13 @@ Catégorie des locaux soumis au régime du loyer forfaitaire de l'article 34 de 
 
 _Cite_:
 
-  - Loi n°48-1360 du 1 septembre 1948 (V)
-  - Code général des impôts, CGI. - art. 1496 (VD)
-
-_Modifié par_:
-
-  - Décret n°74-399 1974-05-03 art. 1 JORF 12 mai 1974
+  - Loi n°48-1360 du 1er septembre 1948
+  - Code général des impôts, CGI. - art. 1496
 
 _Codifié par_:
 
-  - Décret n°99-382 1999-05-18
+  - Décret n°99-382 du 18 mai 1999
 
-**Liens**:
+_Modifié par_:
 
-  - HISTO: Edition du 31 mars 1999
+  - Décret n°2018-535 du 28 juin 2018 - art. 1
