--- a/02. Livre II : Recouvrement de l'impôt/Article 384 A - 6296297.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 384 A - 6296297.md
@@ -2,12 +2,12 @@
 
 I. – Le redevable qui désire acquitter tout ou partie des droits dus par la remise d'œuvres d'art, de livres, d'objets de
 collection, de documents, de haute valeur artistique ou historique mentionnés à l'article 1716 bis du code général des
-impôts, doit déposer une offre de dation à l'Etat, précisant la nature et la valeur de chacun des biens qu'il envisage de
-remettre à l'Etat, au service des impôts compétent pour enregistrer l'acte constatant la mutation ou le partage, la
-déclaration de la succession ou, s'agissant de l'impôt de solidarité sur la fortune, pour recevoir la déclaration spécifique
-ou la déclaration complémentaire de revenus. Il en est délivré récépissé.
+impôts, dépose une offre de dation à l'Etat, précisant la nature et la valeur de chacun des biens qu'il envisage de remettre
+à l'Etat, au service des impôts compétent pour enregistrer la déclaration de succession ou l'acte constatant la mutation à
+titre gratuit ou le partage ou, s'agissant de l'impôt sur la fortune immobilière, pour recevoir la déclaration mentionnée au
+1 du I de l'article 982 du code général des impôts. Il en est délivré récépissé. 
 
-II. – L'offre de dation est soumise aux conditions fixées à l'article 384-0 A bis.
+II. – L'offre de dation est soumise aux conditions fixées à l'article 384-0 A bis. 
 
 III. – En l'absence de décision notifiée dans le délai de deux ans à compter de la date du récépissé de l'offre, celle-ci est
 considérée comme refusée.
@@ -20,7 +20,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2012-1241 du 7 novembre 2012 - art. 1
+  - Décret n°2018-680 du 30 juillet 2018 - art. 1
 
 _Cité par_:
 
@@ -29,5 +29,6 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 384-0 A bis (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 384-0 A bis
   - Code général des impôts, CGI. - art. 1716 bis
+  - Code général des impôts, CGI. - art. 982
