--- a/02. Livre II : Recouvrement de l'impôt/Article 384-0 A bis - 26593529.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 384-0 A bis - 26593529.md
@@ -1,9 +1,10 @@
 # Article 384-0 A bis
 
 I. – L'offre de dation d'œuvres d'art, de livres, d'objets de collection, de documents, de haute valeur artistique ou
-historique prévue à l'article 1716 bis du code général des impôts, doit être faite dans le délai prévu pour l'enregistrement
-de l'acte constatant la mutation ou le partage, ou de la déclaration de la succession ou, pour l'impôt de solidarité sur la
-fortune, dans le délai de dépôt de la déclaration.
+historique prévue à l'article 1716 bis du code général des impôts, est faite dans le délai prévu pour l'enregistrement de la
+déclaration de succession ou de l'acte constatant la mutation à titre gratuit ou le partage ou, s'agissant de l'impôt sur la
+fortune immobilière, dans le délai de dépôt de la déclaration mentionnée au 1 du I de l'article 982 du code général des
+impôts.
 
 II. – L'offre est adressée par le service des impôts à la commission prévue au II de l'article 310 G.
 
@@ -30,9 +31,9 @@ droits redeviennent exigibles.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2012-1241 du 7 novembre 2012 - art. 1
+  - Décret n°2018-680 du 30 juillet 2018 - art. 1
 
 _Cite_:
 
