--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter S - 37125047.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter S - 37125047.md
@@ -5,7 +5,8 @@ du I de l'article 1504 du code général des impôts ou du II de l'article 1518 
 départementale des impôts directs locaux en application du II ou du III de l'article 1504 précité sont notifiées :
 
 1° Au président du conseil départemental, ou, le cas échéant, en Martinique ou en Guyane, au président de l'assemblée
-délibérante de la collectivité territoriale unique, ainsi qu'au président du conseil de la Métropole de Lyon ;
+délibérante de la collectivité territoriale unique, au président du conseil de la Métropole de Lyon, ainsi qu'au maire de
+Paris ;
 
 2° Aux maires des communes et aux présidents des établissements publics de coopération intercommunale à fiscalité propre du
 département.
@@ -19,7 +20,8 @@ notifiées dans les conditions prévues à l'alinéa précédent.
 II.-Les arrêtés pris en application du II, du III ou du IV de l'article 1504 précité sont notifiés :
 
 1° Au président du conseil départemental, ou, le cas échéant, en Martinique ou en Guyane, au président de l'assemblée
-délibérante de la collectivité territoriale unique, ainsi qu'au président du conseil de la Métropole de Lyon ;
+délibérante de la collectivité territoriale unique, au président du conseil de la Métropole de Lyon, ainsi qu'au maire de
+Paris ;
 
 2° Aux maires des communes et aux présidents des établissements publics de coopération intercommunale à fiscalité propre du
 département ;
@@ -27,7 +29,17 @@ département ;
 3° Au président de la commission départementale des valeurs locatives des locaux professionnels et au président de la
 commission départementale des impôts directs locaux.
 
-III.
+III.- Les tarifs pris en application du 
+
+<font color="#000080">I de l'article 1518 ter du code général des impôts</font>
+ sont notifiés :
+
+1° Au président du conseil départemental ou, le cas échéant, en Martinique ou en Guyane, au président de l'assemblée
+délibérante de la collectivité territoriale unique, au président du conseil de la Métropole de Lyon, ainsi qu'au maire de
+Paris ;
+
+2° Aux maires des communes et aux présidents des établissements publics de coopération intercommunale à fiscalité propre du
+département.
 
 IV.-Les décisions et les arrêtés mentionnés aux I à III sont publiés au recueil des actes administratifs de la préfecture du
 département.
@@ -37,7 +49,7 @@ nécessaire, par lettre recommandée avec demande d'avis de réception ou par vo
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
   - Décret n°2018-535 du 28 juin 2018 - art. 1
 
