--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 046 - 6293738.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 046 - 6293738.md
@@ -1,14 +1,22 @@
 # Article 46
 
 En vertu du deuxième alinéa de l'article 110 du code général des impôts et pour l'application des articles 41 et 42, sont
-notamment comprises, pour la totalité, dans le poste " résultats ", les plus-values visées aux articles 39 duodecies, au 1 de
-l'article 39 terdecies et à l'article 238 octies dudit code.
+notamment comprises, pour la totalité, dans le poste " résultats ", les plus-values visées aux articles 39 duodecies et à
+l'article 238 octies dudit code.
+
+**Nota:**
+
+Modification effectuée en conséquence de l’article 37-I-2°-a de la loi n° 2018-1317 du 28 décembre 2018.
 
 **Liens relatifs à cet article**
 
+_Modifié par_:
+
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
+
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 110 (V)
-  - Code général des impôts, CGI. - art. 238 octies (V)
-  - Code général des impôts, CGI. - art. 39 duodecies (V)
-  - Code général des impôts, CGI. - art. 39 terdecies (V)
+  - Code général des impôts, CGI. - art. 110
+  - Code général des impôts, CGI. - art. 238 octies
+  - Code général des impôts, CGI. - art. 39 duodecies
+  - Code général des impôts, CGI. - art. 39 terdecies
