--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
@@ -76,7 +76,7 @@ actions sont transmises certifiant que :
 
 1° Le pourcentage des parts ou actions détenues par le défunt ou le donateur, seul ou avec son conjoint ou le partenaire avec
 lequel il est lié par un pacte civil de solidarité atteignait, au moment de la transmission à titre gratuit, les seuils
-prévus au premier alinéa du b de l'article 787 B précité ;
+prévus au premier alinéa du 1 du b de l'article 787 B précité ;
 
 2° Le défunt, ou le donateur, ou son conjoint, ou le partenaire avec lequel il est lié par un pacte civil de solidarité,
 exerçait, au moment de la transmission à titre gratuit depuis deux ans au moins dans la société dont les titres sont
@@ -94,7 +94,7 @@ Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 
 
 _Modifié par_:
 
-  - Décret n°2018-500 du 20 juin 2018 - art. 3
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
 
 _Cité par_:
 
