--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter L - 37124970.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter L - 37124970.md
@@ -16,7 +16,7 @@ a) Des conseillers départementaux en cas de renouvellement général des consei
 b) Des conseillers métropolitains en cas de renouvellement général du conseil de la Métropole de Lyon ;
 
 c) Des conseillers de Paris, des maires, des représentants des établissements publics de coopération intercommunale à
-fiscalité propre et des représentants des contribuables en cas de renouvellement général des conseils municipaux ;
+fiscalité propre et des représentants des contribuables en cas de renouvellement général des conseils municipaux.
 
 La commission suspend ses travaux le vendredi précédant le renouvellement général des conseils départementaux ou des conseils
 municipaux. Les travaux de la commission reprennent au plus tard une semaine après la désignation des nouveaux membres de la
@@ -24,6 +24,6 @@ commission.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2018-535 du 28 juin 2018 - art. 1
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
