--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 102 Z - 6295302.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 102 Z - 6295302.md
@@ -2,48 +2,52 @@
 
 I.-Lorsqu'elle relève du I de l'article 209 B du code général des impôts, la personne morale établie en France et passible de
 l'impôt sur les sociétés doit joindre à sa déclaration de résultats une déclaration comportant les renseignements et
-documents suivants : 
+documents suivants :
 
 a. Le nom ou la raison sociale ainsi que l'adresse du siège social, l'objet, l'activité, le lieu de la résidence fiscale, les
 noms, prénoms ou raisons sociales et l'adresse des associés et la proportion de la participation mentionnée à l'article 102
 SA en ce qui concerne les entités juridiques établies ou constituées hors de France soumises à un régime fiscal privilégié,
 dans lesquelles son taux de détention, direct ou indirect en actions, parts, droits financiers ou droits de vote au sens du
 premier alinéa du 2 du I de l'article 209 B du code général des impôts, excède le seuil mentionné au 1 du I de ce dernier
-article ; 
+article ;
 
 b. Le lieu d'exercice et l'objet de l'activité de chaque entreprise établie hors de France soumise à un régime fiscal
-privilégié ; 
+privilégié ;
 
 c. Pour chaque entité juridique mentionnée au a ou chaque entreprise mentionnée au b, l'ensemble des documents qui sont
 exigés des sociétés passibles de l'impôt sur les sociétés, y compris le bilan et le compte de résultats établis selon les
-règles fixées par les articles 102 U et 102 V ; 
+règles fixées par les articles 102 U et 102 V ;
 
 d. Le bilan et le compte de résultats de chaque entreprise ou entité juridique, fournis à l'administration fiscale du pays ou
-territoire où elle est située, dans tous les cas où cette administration exige le dépôt de tels documents ; 
+territoire où elle est située, dans tous les cas où cette administration exige le dépôt de tels documents ;
 
 e. Un état faisant apparaître de manière détaillée les bénéfices ou revenus de capitaux mobiliers déterminés selon les règles
-fixées au 3 du I de l'article 209 B du code général des impôts ; 
+fixées au 3 du I de l'article 209 B du code général des impôts ;
 
 f. Pour chacune des entités juridiques établies ou constituées hors de France, un état faisant apparaître le montant cumulé
 des bénéfices ou revenus positifs ayant fait l'objet d'une imposition au titre de l'article 209 B du code général des impôts
-et le montant cumulé des distributions reçues de ces sociétés. 
+et le montant cumulé des distributions reçues de ces sociétés.
 
 II.-Lorsque la personne morale établie en France et passible de l'impôt sur les sociétés estime relever des dispositions du
 II ou du III de l'article 209 B du code général des impôts, elle joint à sa déclaration de résultats une déclaration
 contenant les renseignements mentionnés aux a et b du I du présent article. La production de cette déclaration vaut
-indication expresse au sens du 2 du II de l'article 1727 du même code.
+indication expresse au sens du 1 du II de l'article 1727 du même code.
+
+**Nota:**
+
+Modification effectuée en conséquence de l’article 5- I-1° de la loi n° 2018-727 du 10 août 2018
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2006-1309 du 25 octobre 2006 - art. 1 () JORF 27 octobre 2006
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 102 U (V)
-  - Code général des impôts, CGI. - art. 1727 (V)
-  - Code général des impôts, CGI. - art. 209 B (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 102 U
+  - Code général des impôts, CGI. - art. 1727
+  - Code général des impôts, CGI. - art. 209 B
 
 _Cité par_:
 
