--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 144 - 6294142.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 144 - 6294142.md
@@ -3,7 +3,7 @@
 La déclaration des traitements et salaires que les employeurs sont tenus de souscrire en exécution des dispositions de
 l'article 87 du code général des impôts doit, pour ceux d'entre eux qui sont redevables en totalité ou partiellement de la
 taxe sur les salaires, faire ressortir distinctement, pour chaque bénéficiaire dont la rémunération individuelle annuelle a
-excédé 7 799 €, le montant des salaires et rétributions payés en argent ou en nature durant la période d'application de la
+excédé 7 924 €, le montant des salaires et rétributions payés en argent ou en nature durant la période d'application de la
 majoration de la taxe sur les salaires.
 
 Elle doit comporter, en outre, l'indication du montant des compléments de droits acquittés en application de l'article 142 à
@@ -11,13 +11,13 @@ raison des rémunérations payées pendant cette même période.
 
 **Nota:**
 
-Modification effectuée en conséquence de la loi n° 2017-1837 du 30 décembre 2017 (art. 2-2°).
+Modification effectuée en conséquence de l’article 2-I-2° a de la loi n° 2018-1317 du 28 décembre 2018.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2018-500 du 20 juin 2018 - art. 3
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
 
 _Cite_:
 
