--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 BL - 30224467.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 BL - 30224467.md
@@ -3,11 +3,11 @@
 I. – Dans le cas où ne seraient applicables ni les dispositions de l'ordonnance n° 2005-649 du 6 juin 2005 relative aux
 marchés passés par certaines personnes publiques ou privées non soumises au code des marchés publics, ni les dispositions de
 droit local applicables en matière de commande publique dans les collectivités d'outre-mer, la mise en concurrence prévue par
-le onzième alinéa de l'article 242 septies du code général des impôts est effectuée conformément aux dispositions du II.
+le douzième alinéa de l'article 242 septies du code général des impôts est effectuée conformément aux dispositions du II.
 
 II. – Le contrat conclu avec une entreprise mentionnée au premier alinéa de l'article 242 septies précité est passé selon des
-modalités librement définies par la société exploitant l'investissement mentionnée au onzième alinéa de l'article 242 septies
-précité, dans le respect des principes de transparence et d'égalité de traitement des candidats.
+modalités librement définies par la société exploitant l'investissement mentionnée au douzième alinéa de l'article 242
+septies précité, dans le respect des principes de transparence et d'égalité de traitement des candidats.
 
 La société exploitant l'investissement publie un avis au Bulletin officiel des annonces des marchés publics. Cet avis précise
 notamment les caractéristiques essentielles du contrat et la date limite de présentation des candidatures.
@@ -19,6 +19,10 @@ Lorsque, après une première mise en concurrence, aucune offre n'a été dépos
 entreprise mentionnée au premier alinéa de l'article 242 septies précité sans nouvelle mise en concurrence, sous réserve que
 les caractéristiques initiales du contrat n'aient pas été substantiellement modifiées.
 
+**Nota:**
+
+Modifications effectuées en conséquence de l’article 131-I-4° c et III B 1 et 2 de la loi n° 2018-1317 du 28 décembre 2018.
+
 **Liens relatifs à cet article**
 
 _Cite_:
@@ -26,6 +30,6 @@ _Cite_:
   - Ordonnance n°2005-649 du 6 juin 2005
   - Code général des impôts, CGI. - art. 242 septies
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2015-149 du 10 février 2015 - art. 1
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
