--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 I - 6294723.md
@@ -6,98 +6,102 @@ ce qui concerne certains produits de ce secteur (règlement " OCM unique "), la 
 registres vitivinicoles prévus par le règlement (CE) n° 436/2009 de la Commission du 26 mai 2009 portant modalités
 d'application du règlement (CE) n° 479/2008 du Conseil en ce qui concerne le casier viticole, les déclarations obligatoires
 et l'établissement des informations pour le suivi du marché, les documents accompagnant les transports des produits et les
-registres à tenir dans le secteur vitivinicole ; 
+registres à tenir dans le secteur vitivinicole ;
 
 2° L'entrepositaire agréé doit remettre une copie des documents constituant la comptabilité matières aux agents des douanes
-et droits indirects, sur leur demande. 
+et droits indirects, sur leur demande.
 
 II. – Outre les dispositions de la réglementation communautaire susmentionnée, les registres vitivinicoles sont établis de la
-manière suivante. 
+manière suivante.
 
 1° Les différentes opérations sont enregistrées, sans blanc ni rature, sur un registre aux pages numérotées, ou selon une
 procédure informatisée, chronologiquement et au plus tard le jour ouvrable qui suit l'opération, ou le troisième jour
-ouvrable pour les sorties. 
+ouvrable pour les sorties.
 
 Par exception aux dispositions qui précèdent, les écritures relatives à chaque opération peuvent être portées sur les
 registres au plus tard le dixième jour de chaque mois pour les opérations du mois précédent, à condition qu'un contrôle des
 entrées et sorties, ainsi que des manipulations, reste possible sur la base de pièces justificatives à toute réquisition des
-agents des douanes et droits indirects ou de ceux de la concurrence, de la consommation et de la répression des fraudes. 
+agents des douanes et droits indirects ou de ceux de la concurrence, de la consommation et de la répression des fraudes.
 
 Les registres comportent les colonnes ouvertes avec les intitulés exigés par la réglementation communautaire et portent les
 références des contrats d'achat soumis au visa de l'établissement mentionné à l'article L. 621-1 du code rural et de la pêche
-maritime pour les transactions soumises à cette procédure. 
+maritime pour les transactions soumises à cette procédure.
 
 Sans préjudice d'autres dispositions prévues par les règlements et accords interprofessionnels visés notamment aux articles
 L. 632-1 à L. 632-7 du code rural et de la pêche maritime, les registres comportent pour les vins bénéficiant d'une
 protection de dénomination, les références aux déclarations de revendication au bénéfice de cette protection prévues par la
 réglementation en vigueur, les numéros d'enregistrement des contrats d'achat et les numéros des déclarations de transactions
 soumis préalablement aux interprofessions tels que prévus dans les accords interprofessionnels étendus mentionnés aux
-articles précités. 
+articles précités.
 
 Les registres comportent, le cas échéant, les références aux comptes d'âges ou de vieillissement prévus par les textes
-réglementaires en vigueur et les règlements des organismes interprofessionnels. 
+réglementaires en vigueur et les règlements des organismes interprofessionnels.
 
 En cas d'application des dispositions de l'article 450 du code général des impôts ou des articles 661 et 662 du code rural
 ancien, les registres doivent faire référence, pour chaque mouvement de produits vitivinicoles mentionnés au règlement (CE)
 n° 1234/2007 précité, à l'avis de blocage, à l'engagement de garantie ou de mainlevée du porteur du warrant agricole ou du
-porteur de l'engagement de garantie. 
+porteur de l'engagement de garantie.
 
-L'identité du détenteur des registres doit figurer sur la première page de chacun des registres. 
+L'identité du détenteur des registres doit figurer sur la première page de chacun des registres.
 
-2° Les registres vitivinicoles peuvent être tenus selon une procédure informatisée. 
+2° Les registres vitivinicoles peuvent être tenus selon une procédure informatisée.
 
 Les personnes qui tiennent les registres informatisés doivent, à toute réquisition des agents de l'administration, permettre
 à ces agents de vérifier que ces registres sont conformes aux dispositions de la réglementation communautaire en vigueur, de
-l'article 286 H et du présent article. 
+l'article 286 H et du présent article.
 
 3° Ces registres vitivinicoles peuvent être constitués par des éléments d'une comptabilité commerciale informatisée dès lors
-qu'elle comporte : 
+qu'elle comporte :
 
 a) Toutes les indications nécessaires relatives aux mouvements des produits et au déroulement des manipulations conformément
-aux dispositions européennes et aux informations prévues au 1° du II ; 
+aux dispositions européennes et aux informations prévues au 1° du II ;
 
-b) La reprise des inventaires physiques des produits réalisés au moment de la clôture de l'exercice comptable. 
+b) La reprise des inventaires physiques des produits réalisés au moment de la clôture de l'exercice comptable.
 
 III. – Les entrepositaires agréés doivent effectuer la balance des registres en y inscrivant pour tous les produits
 vitivinicoles, au plus tard le dixième jour de chaque mois, le stock théorique en début du mois précédent, le stock théorique
-en fin du mois précédent et le total des entrées et des sorties du mois précédent. 
+en fin du mois précédent et le total des entrées et des sorties du mois précédent.
 
 Cette balance ne peut servir à elle seule d'élément de preuve pour la constatation de manquants entraînant, conformément au
-2° bis du 1 du I de l'article 302 D du code général des impôts, l'exigibilité de l'impôt. 
+2° bis du 1 du I de l'article 302 D du code général des impôts, l'exigibilité de l'impôt.
 
 Les entrepositaires agréés transmettent au service des douanes et droits indirects territorialement compétent, au plus tard
 le dixième jour de chaque mois, une déclaration récapitulative comportant les renseignements mentionnés au premier alinéa et,
-le cas échéant, ceux prévus au 1° du II. 
+le cas échéant, ceux prévus au 1° du II.
 
 IV. – Les registres doivent être clôturés une fois par an pour les récoltants y compris les sociétés coopératives et leurs
 unions. La déclaration annuelle est transmise au service des douanes et droits indirects territorialement compétent, au plus
-tard le dixième jour du deuxième mois qui suit la clôture des comptes. 
+tard le dixième jour du deuxième mois qui suit la clôture des comptes.
 
 V. – Les registres peuvent être constitués par des annotations au verso des déclarations de récolte et des stocks mentionnées
-à l'article 407 du code général des impôts. 
+à l'article 407 du code général des impôts.
 
 VI. – Les registres sont tenus par entrepôt fiscal suspensif de droits d'accises et sur les lieux mêmes où les produits sont
-détenus. 
+détenus.
 
-Au sein d'un site d'exploitation, les registres sont tenus au siège de l'exploitation. 
+Au sein d'un site d'exploitation, les registres sont tenus au siège de l'exploitation.
 
-Le siège de l'exploitation s'entend du lieu où est située l'installation principale de ce site. 
+Le siège de l'exploitation s'entend du lieu où est située l'installation principale de ce site.
 
 Dans ce cas, les entrepositaires agréés sont tenus d'indiquer à l'administration des douanes et droits indirects l'adresse de
-ce lieu. 
+ce lieu.
 
-VII. – Les registres vitivinicoles peuvent être regroupés sur un seul document. 
+VII. – Les registres vitivinicoles peuvent être regroupés sur un seul document.
 
 VIII. – Les registres et les pièces justificatives nécessaires à leur tenue et les documents prévus aux IV et VI sont
-conservés dans les conditions et selon les modalités fixées à l'article L. 102 B du livre des procédures fiscales. 
+conservés dans les conditions et selon les modalités fixées à l'article L. 102 B du livre des procédures fiscales.
 
 IX. – La validation des documents mentionnés aux articles 302 M, 302 M bis et 302 M ter du code général des impôts pour
 l'expédition ou l'enlèvement des produits vitivinicoles n'est possible que si l'entrepositaire agréé respecte les obligations
-afférentes à la tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées
-aux articles 614 et 614 A dudit code. 
+afférentes à la tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées à
+l'article 614.
 
 En cas de manquements graves ou répétés aux dispositions ci-dessus, la qualité d'entrepositaire agréé peut être retirée par
 le directeur interrégional des douanes et droits indirects.
+
+**Nota:**
+
+Modification effectuée en conséquence de l’article 81-I-9° de la loi n° 2015-1785 du 29 décembre 2015
 
 **Liens relatifs à cet article**
 
@@ -121,18 +125,18 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2016-1584 du 24 novembre 2016 - art. 2
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
 
 _Cite_:
 
   - Code général des impôts, CGI. - art. 302 D
   - Code général des impôts, CGI. - art. 302 M
-  - Code général des impôts, CGI. - art. 302 M bis (VD)
-  - Code général des impôts, CGI. - art. 302 M ter (VD)
-  - Code général des impôts, CGI. - art. 407 (V)
-  - Code général des impôts, CGI. - art. 450 (VD)
+  - Code général des impôts, CGI. - art. 302 M bis
+  - Code général des impôts, CGI. - art. 302 M ter
+  - Code général des impôts, CGI. - art. 407
+  - Code général des impôts, CGI. - art. 450
   - Code général des impôts, CGI. - art. 614
   - Livre des procédures fiscales - art. L102 B
   - Code rural ancien - art. 661
   - Code rural - art. L621-1
-  - Code rural - art. L632-1 (V)
+  - Code rural - art. L632-1
