--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 J - 6294728.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 286 J - 6294728.md
@@ -229,11 +229,15 @@ procédures fiscales.
 
 XI. – La validation des documents mentionnés aux articles 302 M, 302 M bis et 302 M ter du code général des impôts pour
 l'expédition ou l'enlèvement de produits n'est possible que si l'entrepositaire agréé respecte les obligations afférentes à
-la tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées aux articles
-614 et 614 A dudit code.
+la tenue de la comptabilité matières telles que prévues par le présent article et les obligations mentionnées à l'article 614
+dudit code.
 
 En cas de manquements graves ou répétés aux dispositions ci-dessus, la qualité d'entrepositaire agréé peut être retirée par
 le directeur interrégional des douanes et droits indirects.
+
+**Nota:**
+
+Modification effectuée en conséquence de l’article 81-I-9° de la loi n° 2015-1785 du 29 décembre 2015
 
 **Liens relatifs à cet article**
 
@@ -250,7 +254,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2016-1584 du 24 novembre 2016 - art. 2
+  - Décret n°2019-559 du 6 juin 2019 - art. 2
 
 _Cite_:
 
@@ -261,14 +265,14 @@ _Cite_:
   - Code général des impôts, CGI. - art. 277 A
   - Code général des impôts, CGI. - art. 302 D
   - Code général des impôts, CGI. - art. 302 G
-  - Code général des impôts, CGI. - art. 302 M (VD)
-  - Code général des impôts, CGI. - art. 302 M bis (VD)
-  - Code général des impôts, CGI. - art. 302 M ter (VD)
+  - Code général des impôts, CGI. - art. 302 M
+  - Code général des impôts, CGI. - art. 302 M bis
+  - Code général des impôts, CGI. - art. 302 M ter
   - Code général des impôts, CGI. - art. 338
-  - Code général des impôts, CGI. - art. 438
+  - Code général des impôts, CGI. - art. 438 (M)
   - Code général des impôts, CGI. - art. 450
   - Code général des impôts, CGI. - art. 575 A
   - Code général des impôts, CGI. - art. 614
-  - Livre des procédures fiscales - art. L102 B (V)
+  - Livre des procédures fiscales - art. L102 B
   - Code rural ancien - art. 661
   - Code rural - art. L632-1
