--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 J - 6293790.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 J - 6293790.md
@@ -2,26 +2,29 @@
 
 Les prestataires de services d'investissement et les établissements de crédit ou organismes habilités à détenir et à négocier
 des valeurs mobilières pour le compte des particuliers doivent déclarer à l'administration le montant global, compte non tenu
-des frais, des cessions effectuées par chacun de leurs clients. 
+des frais, des cessions effectuées par chacun de leurs clients, ainsi que le montant des soultes reçues lors d'opérations
+d'échange ou d'apport entrant dans les prévisions des articles  150-0 B ou  150-0 B ter du code général des impôts.
 
 Ces renseignements doivent parvenir, avant le 16 février de chaque année pour les opérations de l'année précédente, au
 service d'assiette dont relève la résidence ou le principal établissement du déclarant. Ils figurent sur la déclaration
-prévue au 1 de l'article 242 ter du code général des impôts lorsque celle-ci doit être souscrite. 
+prévue au 1 de l'article 242 ter du code général des impôts lorsque celle-ci doit être souscrite.
 
 Les sociétés de personnes ou groupements mentionnés à l'article 74-0 I doivent déclarer dans les mêmes conditions la quote-
 part du montant des cessions correspondant aux droits de chacun de leurs membres dans la société ou le groupement.
 
+**Nota:**
+
+Conformément à l'article 2 du décret n° 2020-122 du 13 février 2020, ces dispositions s'appliquent aux soultes reçues lors
+d'opérations d'échange ou d'apport réalisées à compter du 1er janvier 2020.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2000-1190 du 5 décembre 2000 - art. 1 () JORF 8 décembre 2000
+  - Décret n°2020-122 du 13 février 2020 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 I (V)
-  - Code général des impôts, CGI. - art. 242 ter (V)
-
-**Liens**:
-
-  - HISTO: Edition du 31 mars 2001
+  - Code général des impôts, CGI. - art. 150-0 B
+  - Code général des impôts, CGI. - art. 150-0 B ter
+  - Code général des impôts, CGI. - art. 242 ter
