--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 AI - 6295087.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 AI - 6295087.md
@@ -1,20 +1,21 @@
 # Article 371 AI
 
 Les attributions des centres de formalités des entreprises concernant la gestion du dossier unique des entreprises, les
-relations des centres avec les greffes des tribunaux de commerce et des tribunaux de grande instance, avec les organismes et
+relations des centres avec les greffes des tribunaux de commerce et des tribunaux judiciaires, avec les organismes et
 autorités compétents pour statuer sur les déclarations et les demandes d'autorisations afférentes à l'exercice de certaines
 activités ainsi que les obligations des centres sont établies conformément aux articles R. 123-1 et R. 123-2 du code de
 commerce.
 
 **Nota:**
 
-Modifications effectuées en conséquence des articles R. 123-1 et R. 123-2 du code de commerce.
+Conformément aux dispositions de l'article 9 du décret n° 2019-966 du 18 septembre 2019, ces dispositions entrent en vigueur
+le 1er janvier 2020.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2011-645 du 9 juin 2011 - art. 2
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Cite_:
 
